--- a/index.html
+++ b/index.html
@@ -6,12 +6,66 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 53 个博客、8888 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 53 个博客、8912 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=conge.livingwithfcs.org/2025%20%E4%BA%8C%E6%9C%88%E8%AF%BB%E5%9C%B0%E7%90%83%E7%A7%91%E5%AD%A6%20%E8%AE%BE%E8%AE%A1%E7%90%86%E8%AE%BA%20%E6%96%87%E5%AD%A6%E5%B0%8F%E8%AF%B4%20%E4%BC%A0%E8%AE%B0%20%E4%BD%9B%E7%BB%8F%E2%80%A6%E2%80%A6%2010%20%E6%9C%AC.html>2025-03-04 2025 二月读地球科学 设计理论 文学小说 传记 佛经…… 10 本</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202509%20%E6%8C%82%E9%92%A9%E5%84%BF.html>2025-03-04 父范学堂 2509 挂钩儿</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202509%20%E8%AE%AD%E7%BB%83%E7%AC%AC%E5%9B%9B%E5%91%A8%20%E5%AE%8C%E5%85%A8%E8%BA%BA%E5%B9%B3%E4%BC%91%E6%81%AF.html>2025-03-03 折返点 2509 训练第四周 完全躺平休息</a></li>
+
+<li><a href=sakurawald.github.io/comparing-emacs-and-idea-in-java-development-environment.html>2025-03-02 comparing-emacs-and-idea-in-java-development-environment</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%A1%AB%E7%A9%BA%E9%97%AE%E9%A2%98.html>2025-02-28 填空问题</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%A9%BA%E8%AF%9D.html>2025-02-27 空话</a></li>
+
+<li><a href=codeinchinese.com/%E9%9A%8F%E4%B9%A6%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E5%B7%A5%E5%85%B7Sunaba%E6%9C%AC%E5%9C%B0%E5%BC%80%E5%8F%91%E6%90%AD%E5%BB%BA.html>2025-02-27 随书编程语言工具Sunaba本地开发搭建</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202508%20%E7%AC%AC%E4%B8%89%E5%91%A8%E8%AE%A1%E5%88%92%20%E5%BC%80%E5%B1%80%E5%BE%88%E5%A5%BD%E7%BB%93%E5%B1%80%E7%94%9F%E7%97%85.html>2025-02-24 折返点 2508 第三周计划 开局很好结局生病</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202508%20Harrison%20Hot%20Spring.html>2025-02-23 父范学堂 2508 Harrison Hot Spring</a></li>
+
+<li><a href=mabbs.github.io/%E8%BF%91%E6%9C%9FLLM%E7%9A%84%E9%83%A8%E7%BD%B2%E4%B8%8E%E5%BA%94%E7%94%A8%E7%BB%8F%E5%8E%86.html>2025-02-22 近期LLM的部署与应用经历</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202507%20%E7%9C%8B%E4%BA%86%E5%93%AA%E5%90%92.html>2025-02-20 父范学堂 2507 看了哪吒</a></li>
+
+<li><a href=babyno.top/%E6%96%87%E9%A2%9C3.0%E5%8F%91%E5%B8%83%EF%BC%8C%E6%94%AF%E6%8C%81%E8%87%AA%E5%8A%A8%E4%B8%8A%E4%BC%A0%E5%9B%BE%E7%89%87.html>2025-02-19 文颜3.0发布，支持自动上传图片</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202507%20%E5%BC%80%E5%90%AF%E4%BB%8A%E5%B9%B4%E7%9A%84%E8%AE%AD%E7%BB%83.html>2025-02-18 折返点 2507 开启今年的训练</a></li>
+
+<li><a href=luyuhuang.github.io/%E4%BD%BF%E7%94%A8%20Address%20Sanitizer%20%E6%8E%92%E6%9F%A5%E5%86%85%E5%AD%98%E8%B6%8A%E7%95%8C.html>2025-02-16 使用 Address Sanitizer 排查内存越界</a></li>
+
+<li><a href=conge.livingwithfcs.org/2025%20%E4%B8%80%E6%9C%88%E8%AF%BB%E7%A7%91%E5%AD%A6%E5%8F%B2%20%E5%BF%83%E7%90%86%E5%AD%A6%20%E5%AE%97%E6%95%99%20%E8%82%B2%E5%84%BF%E5%B0%8F%E8%AF%B4%E2%80%A6%E2%80%A6%2011%20%E6%9C%AC.html>2025-02-12 2025 一月读科学史 心理学 宗教 育儿小说…… 11 本</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202506%20%E4%B8%80%E5%9C%BA%E9%9B%AA.html>2025-02-12 父范学堂 2506 一场雪</a></li>
+
+<li><a href=sund.site/%E5%8F%8B%E6%83%85%E9%93%BE%E6%8E%A5.html>2025-02-11 友情链接</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202506%20%E7%97%85.html>2025-02-11 折返点 2506 病</a></li>
+
+<li><a href=kexizeroing.github.io/Algorithm%20basics%20and%20LeetCode%20problems.html>2025-02-10 Algorithm basics and LeetCode problems</a></li>
+
+<li><a href=mabbs.github.io/%E6%96%B0%E6%97%A7%E6%9C%8D%E5%8A%A1%E5%99%A8%E7%9A%84%E4%BD%BF%E7%94%A8%E4%BD%93%E9%AA%8C%E4%B8%8E%E5%AF%B9%E6%AF%94.html>2025-02-09 新旧服务器的使用体验与对比</a></li>
+
+<li><a href=lutaonan.com/%E6%96%B0%20MacBook%20%E7%9A%84%E8%AE%BE%E7%BD%AE%E5%92%8C%E8%BD%AF%E4%BB%B6.html>2025-02-08 新 MacBook 的设置和软件</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202505%20%E8%BF%87%E6%96%B0%E5%B9%B4%E5%92%8C%E5%A5%B3%E5%84%BF%E5%86%8D%E6%AC%A1%E7%99%BB%E5%8F%B0.html>2025-02-07 父范学堂 2505 过新年和女儿再次登台</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202505%20%E5%86%AC%E5%8B%87%E8%B5%9B%20%E5%8B%87%E8%80%85%E6%81%92%E5%BC%BA.html>2025-02-06 折返点 2505 冬勇赛 勇者恒强</a></li>
+
+<li><a href=codeinchinese.com/%E3%80%8AThe%20Calculus%20of%20Friendship%E3%80%8B%E6%91%98%E5%BD%95%EF%BC%88%E4%B8%8B%EF%BC%89.html>2025-02-06 《The Calculus of Friendship》摘录（下）</a></li>
+
+<li><a href=codeinchinese.com/Python%E5%92%8C%E6%9C%A8%E5%85%B0%E6%8A%A5%E9%94%99%E4%BF%A1%E6%81%AF%E5%AF%B9%E5%BA%94%E4%BE%8B%E7%A8%8B%E6%95%B4%E7%90%86%EF%BC%88%E4%B8%80%EF%BC%89.html>2025-02-03 Python和木兰报错信息对应例程整理（一）</a></li>
+
+<li><a href=informal.top/Weekly-%2322%202025%20New%20Year.html>2025-02-02 Weekly-#22 2025 New Year</a></li>
+
+<li><a href=codeinchinese.com/%E3%80%8C%E6%8A%9A%E5%AD%90%E3%80%8D%E8%AF%AD%E8%A8%80%E7%9A%84%E8%B0%83%E8%AF%95%E5%8A%9F%E8%83%BD%3F%3F.html>2025-01-31 「抚子」语言的调试功能??</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202504%20%E6%B8%85%E5%8D%8E%E5%86%AC%E5%AD%A3%E5%8B%87%E5%A3%AB%E8%B5%9B%E7%AC%AC%E5%9B%9B%E5%91%A8.html>2025-01-30 折返点 2504 清华冬季勇士赛第四周</a></li>
 
@@ -39,11 +93,13 @@
 
 <li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E4%B9%9D%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E4%B9%8B%E5%87%BD%E6%95%B0.html>2025-01-20 Rust 在线摸索（九）：泛型之函数</a></li>
 
+<li><a href=codeinchinese.com/%E3%80%8AThe%20Calculus%20of%20Friendship%E3%80%8B%E6%91%98%E5%BD%95%EF%BC%88%E4%B8%8A%EF%BC%89.html>2025-01-19 《The Calculus of Friendship》摘录（上）</a></li>
+
 <li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E5%85%AB%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E6%B2%A1%E5%85%A5%E9%97%A8.html>2025-01-19 Rust 在线摸索（八）：泛型没入门</a></li>
 
 <li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E4%B8%83%EF%BC%89%EF%BC%9Astruct.html>2025-01-18 Rust 在线摸索（七）：struct</a></li>
 
-<li><a href=informal.top/Weekly-%2320%20AutoSwitch%20Translate.html>2025-01-18 Weekly-#20 AutoSwitch Translate</a></li>
+<li><a href=informal.top/Weekly-%2321%20AutoSwitch%20Translate.html>2025-01-18 Weekly-#21 AutoSwitch Translate</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202502%20%E8%82%89%E9%85%B1%E5%8D%83%E5%B1%82%E9%9D%A2%20%E5%8A%A0%E8%8F%B2%E7%8C%AB%E6%9C%80%E7%88%B1.html>2025-01-17 父范学堂 2502 肉酱千层面 加菲猫最爱</a></li>
 
@@ -154,8 +210,6 @@
 <li><a href=kexizeroing.github.io/Inspirations.html>2024-12-06 Inspirations</a></li>
 
 <li><a href=kexizeroing.github.io/TIL.html>2024-12-06 TIL</a></li>
-
-<li><a href=kexizeroing.github.io/Algorithm%20basics%20and%20sample%20problems.html>2024-12-06 Algorithm basics and sample problems</a></li>
 
 <li><a href=codeinchinese.com/%E5%BC%80%E5%BF%83%E5%9C%B0%E5%90%AC%E8%AF%B4%E8%AF%BB%E5%86%99%EF%BC%88%E4%B8%80%EF%BC%89.html>2024-12-06 开心地听说读写（一）</a></li>
 
@@ -287,11 +341,7 @@
 
 <li><a href=informal.top/Weekly-%239%20Startup%20of%20YouTube.html>2024-10-27 Weekly-#9 Startup of YouTube</a></li>
 
-<li><a href=informal.top/%E4%BB%8A%E5%A4%A9OPR%E4%BA%86.html>2024-10-25 今天OPR了</a></li>
-
 <li><a href=sund.site/%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F%E9%A1%B9%E7%9B%AE%E5%A4%8D%E7%9B%98.html>2024-10-24 监控系统项目复盘</a></li>
-
-<li><a href=sund.site/Blogroll.html>2024-10-23 Blogroll</a></li>
 
 <li><a href=sakurawald.github.io/favorite%20krunner%20plugins.html>2024-10-23 favorite krunner plugins</a></li>
 
@@ -402,6 +452,8 @@
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20376%20%E7%BB%93%E6%9D%9F%E4%BA%86%E5%9C%A8%E4%B8%AD%E5%9B%BD%E7%9A%84%E6%97%85%E8%A1%8C.html>2024-09-06 新爸五年计划 - 376 结束了在中国的旅行</a></li>
 
 <li><a href=conge.livingwithfcs.org/2024%20%E4%B8%83%E6%9C%88%E8%AF%BB%E5%AE%87%E5%AE%99%EF%BC%8C%E6%98%93%E7%BB%8F%EF%BC%8C%E5%8D%9A%E4%BC%BD%E6%A2%B5%E6%AD%8C%EF%BC%8C%E8%A7%89%E9%86%92%EF%BC%8C%E8%AE%A4%E7%9F%A5%E8%A1%8C%E4%B8%BA%E7%96%97%E6%B3%95%EF%BC%8C%E5%93%B2%E5%AD%A6%E2%80%A6%E2%80%A6%2010%20%E6%9C%AC.html>2024-09-06 2024 七月读宇宙，易经，博伽梵歌，觉醒，认知行为疗法，哲学…… 10 本</a></li>
+
+<li><a href=xnum.github.io/2024_8%20%E8%8F%B2%E5%BE%8B%E8%B3%93%E9%81%8A%E5%AD%B8%E8%A8%98.html>2024-09-05 2024/8 菲律賓遊學記</a></li>
 
 <li><a href=qubeijun.github.io/%E7%88%B6%E4%BA%B2%E5%BE%80%E4%BA%8B-%E5%AE%B6%E5%B1%9E%E6%9D%A5%E9%98%9F.html>2024-09-03 父亲往事-家属来队</a></li>
 
@@ -718,8 +770,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20360%20%E8%87%AA%E8%A1%8C%E8%BD%A6%E5%92%8C%E8%8B%B9%E6%9E%9C%E6%B4%BE.html>2024-05-11 新爸五年计划 - 360 自行车和苹果派</a></li>
 
 <li><a href=qubeijun.github.io/%E7%B3%BB%E7%BB%9F%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A1%E5%B8%88.html>2024-05-10 系统架构设计师</a></li>
-
-<li><a href=informal.top/%E7%A6%BB%E8%81%8C%E4%BA%86.html>2024-05-10 离职了</a></li>
 
 <li><a href=kneep.github.io/%E3%80%90%E5%86%85%E5%AD%98%E6%A8%A1%E5%9E%8B%E3%80%91%E9%A1%BA%E5%BA%8F%E4%B8%80%E8%87%B4%E6%80%A7.html>2024-05-10 【内存模型】顺序一致性</a></li>
 
@@ -7243,7 +7293,7 @@
 
 <li><a href=zsqk.github.io/closure.html>2020-05-12 closure</a></li>
 
-<li><a href=sund.site/Hello.html>2020-05-11 Hello</a></li>
+<li><a href=sund.site/Hi.html>2020-05-11 Hi</a></li>
 
 <li><a href=ditou.org/2020%E5%B9%B45%E6%9C%88%E7%9A%84%E4%B8%80%E4%BA%9B%E6%84%9F%E6%82%9F.html>2020-05-11 2020年5月的一些感悟</a></li>
 
@@ -17723,13 +17773,15 @@
 
 <li><a href=kexizeroing.github.io/Rice%20clear%20turn-in.html>Jan 28 201 Rice clear turn-in</a></li>
 
-<li><a href=kexizeroing.github.io/Micro-frontends%20with%20Module%20Federation.html>Jan 27 202 Micro-frontends with Module Federation</a></li>
-
 <li><a href=kexizeroing.github.io/Intro%20to%20Bun.html>Jan 22 202 Intro to Bun</a></li>
 
 <li><a href=kexizeroing.github.io/Tech%20Share%20Rewind%202024.html>Jan 14 202 Tech Share Rewind 2024</a></li>
 
 <li><a href=kexizeroing.github.io/Container%20queries%20and%20%3Ahas%20selector.html>Jan 08 202 Container queries and :has selector</a></li>
+
+<li><a href=kexizeroing.github.io/Learning%20notes%20about%20TanStack%20Router.html>Feb 23 202 Learning notes about TanStack Router</a></li>
+
+<li><a href=kexizeroing.github.io/Next.js%20Forms%20are%20different%20now.html>Feb 22 202 Next.js Forms are different now</a></li>
 
 <li><a href=kexizeroing.github.io/Setup%20a%20new%20mac.html>Feb 13 202 Setup a new mac</a></li>
 
@@ -17737,7 +17789,7 @@
 
 <li><a href=kexizeroing.github.io/A%20quick%20way%20to%20serve%20HTTPS%20localhost.html>Dec 31 202 A quick way to serve HTTPS localhost</a></li>
 
-<li><a href=kexizeroing.github.io/Learn%20from%20Advent%20of%20Vue%202022.html>Dec 27 202 Learn from Advent of Vue 2022</a></li>
+<li><a href=kexizeroing.github.io/Learn%20from%20Advent%20of%20Vue.html>Dec 27 202 Learn from Advent of Vue</a></li>
 
 <li><a href=kexizeroing.github.io/Understand%20npm%20concepts.html>Dec 14 202 Understand npm concepts</a></li>
 
@@ -17759,8 +17811,6 @@
 
 <li><a href=kexizeroing.github.io/Demystifying%20HMR%20and%20Source%20Maps.html>Aug 24 202 Demystifying HMR and Source Maps</a></li>
 
-<li><a href=kexizeroing.github.io/Simple%20frontend%20router.html>Aug 18 202 Simple frontend router</a></li>
-
 <li><a href=kexizeroing.github.io/Using%20ES%20modules.html>Aug 12 202 Using ES modules</a></li>
 
 <li><a href=kexizeroing.github.io/Get%20started%20with%20LangChain.html>Apr 9 2023 Get started with LangChain</a></li>
@@ -17768,8 +17818,6 @@
 <li><a href=kexizeroing.github.io/A%20guide%20to%20Prompt%20Engineering.html>Apr 5 2023 A guide to Prompt Engineering</a></li>
 
 <li><a href=kexizeroing.github.io/My%20early%20career%20notes%20%28in%20Chinese%29.html>Apr 24 201 My early career notes (in Chinese)</a></li>
-
-<li><a href=kexizeroing.github.io/Unlock%20the%20power%20of%20Generative%20UI.html>Apr 16 202 Unlock the power of Generative UI</a></li>
 
 <li><a href=jerkwin.github.io/GROMACS%E4%B8%AD%E6%96%87%E6%89%8B%E5%86%8C.html>9999-12-31 GROMACS中文手册</a></li>
 
