--- a/informal.top/Outline of LLM acceleration.html
+++ b/informal.top/Outline of LLM acceleration.html
@@ -49,6 +49,8 @@
 <li>10%</li>
 <li><a href="https://github.com/lucidrains/performer-pytorch">code</a>: hold</li>
 </ul>
+<h4><a href="https://arxiv.org/pdf/2405.04434">Multi-head Latent Attention</a></h4>
+<p>Project high dimension into low dimension for KV cache, which can reduct much memory ustage.</p>
 <h3>Block</h3>
 <h4><a href="https://arxiv.org/abs/2205.14135">FlashAttention</a></h4>
 <p>Matrices multiplication by blocks</p>
@@ -90,10 +92,9 @@
 <li>Avoid to store final large matrix throught block computation, which can save lots of memory when vocabulary is large. </li>
 <li><p>Softmax matrix is sparse, when all values are smaller than precision of data type, computation are unnecessary.</p>
 <p><img alt="Idea" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/informal.top/images/2025/0115-01.png"/>{: width="600"}</p>
+<p><img alt="Performance" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/informal.top/images/2025/0115-02.png"/>{: width="600"}</p>
 </li>
 </ul>
-<pre><code>![Performance](/images/2025/0115-01.png){: width="600"}
-</code></pre>
 <h3>Basic</h3>
 <ul>
 <li><a href="https://informal.top/posts/validated-example/">Fast Cross Entropy Loss</a></li>
