--- a/informal.top/Validated example of LLM acceleration.html
+++ b/informal.top/Validated example of LLM acceleration.html
@@ -25,8 +25,8 @@ $$</p>
 <p>This can prove that My new code have the same result compare to default official code.</p>
 <h1>Result</h1>
 <p>default offical key code:</p>
-<pre><code class="lang-python"># time complexity 2n for subtracting max-logit
-log_probs = -nn.functional.log_softmax(logits, dim=-1) # time complexity 4n
+<pre><code class="lang-python"># time complexity 2n for subtracting max-logit (max, subtract)
+log_probs = -nn.functional.log_softmax(logits, dim=-1) # time complexity 4n (exp, sum_exp, expx / sum_exp, + max)
 
 nll_loss = log_probs.gather(dim=-1, index=labels) # 1n
 smoothed_loss = log_probs.sum(dim=-1, keepdim=True, dtype=torch.float32) # 1n
@@ -35,10 +35,10 @@ smoothed_loss = log_probs.sum(dim=-1, keepdim=True, dtype=torch.float32) # 1n
 <pre><code class="lang-python">logitsmax = logits.max(dim = -1)[0].unsqueeze(-1) # 1n
 logsumexp = ((logits - logitsmax.repeat(1, 1, logits.shape[-1])).exp().sum(dim = -1).log()).unsqueeze(-1) + logitsmax # 3n
 
-nll_loss = logsumexp - logits.gather(dim=-1, index=labels) # 0
+nll_loss = logsumexp - logits.gather(dim=-1, index=labels) # 1n
 smoothed_loss = (logits.shape[-1] * logsumexp - logits.sum(dim = -1, keepdim=True, dtype = torch.float32)) # 1n
 </code></pre>
-<p>PS: In theory, time complexity reduce from $8n$ to $5n$, I'm not 100% confirm this value right and it's hard to prove that.</p>
+<p>PS: In theory, time complexity reduce from $8n$ to $6n$, I'm not 100% confirm this value right and it's hard to prove that.</p>
 <p>In terms of time cost in finetune Gemma2, I only sample 100 sample(my fault) from <a href="https://huggingface.co/datasets/yahma/alpaca-cleaned">yahma/alpaca-cleaned</a> and run 60 steps two times for both official code and new code.</p>
 <table>
 <thead><tr>
