--- a/kexizeroing.github.io/Explore running code in browser.html
+++ b/kexizeroing.github.io/Explore running code in browser.html
@@ -108,6 +108,13 @@ const babelTransformWithPlugin = (code) =&gt; {
   }).code;
 };
 </code></pre>
+<blockquote><p>Babel's core packages:</p>
+<ul>
+<li><code>babel-core</code>: The core module that wraps everything in our transform api (used for integrations)</li>
+<li><code>babel-parser</code>: babel-parser (Babylon) is a JavaScript parser used in Babel</li>
+<li><code>babel-generator</code>: Prints a string from an AST</li>
+</ul>
+</blockquote>
 <h3>CodeSandbox and StackBlitz</h3>
 <p><strong>Sandpack</strong> is a component toolkit for creating live-running code editing experiences, powered by the online bundler used on CodeSandbox. <a href="https://sandpack.codesandbox.io">https://sandpack.codesandbox.io</a></p>
 <pre><code class="lang-jsx">import { Sandpack } from "@codesandbox/sandpack-react";
@@ -167,7 +174,7 @@ ReactDOM.render(
 <pre><code class="lang-js">const selectedModel = "Llama-3-8B-Instruct-q4f32_1-MLC";
 const engine = await webllm.CreateMLCEngine(selectedModel);
 </code></pre>
-<p>Pyodide is a Python distribution for the browser and Node.js based on WebAssembly. Pyodide makes it possible to install and run Python packages in the browser. Try Pyodide in a <a href="https://pyodide.org/en/stable/console.html">REPL</a> directly in your browser.</p>
+<p>Pyodide is a Python distribution for the browser and Node.js based on WebAssembly. Pyodide makes it possible to install and run Python packages in the browser. Try Pyodide in a <a href="https://pyodide.org/en/stable/console.html">REPL</a> directly in your browser, or <a href="https://pydantic.run/">pydantic.run</a>, a Python browser sandbox based on Pyodide. Write and share Python code, run it in the browser.</p>
 <pre><code class="lang-js">async function main(){
   let pyodide = await loadPyodide();
   console.log(pyodide.runPython(`
