--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -300,6 +300,12 @@ chain.invoke("What color is Patricia's car?")
 <li>Memory: Short (e.g. chat history) and long-term (e.g. vector store) memories.</li>
 <li>Tool use: External APIs for extra information.</li>
 </ul>
+<blockquote><p>Agents are distinct from workflows:</p>
+<ul>
+<li>Agents: non-linear, non-deterministic (can change from run to run)</li>
+<li>Workflows: linear, deterministic execution paths</li>
+</ul>
+</blockquote>
 <p>ReAct is a very popular implementation of an agent and involves basically the loop of Action-Observation-Thinking to perform tasks. (Planning: Lets LLM choose an action, observe result, think, and choose action again.)</p>
 <p>Delving into the LangChain codebase, we find that this orchestration is performed by the following prompt:</p>
 <pre><code>Answer the following questions as best you can. You have access to the following tools:
@@ -382,6 +388,7 @@ while (true) {
 <li><p>Ollama + OpenWebUI</p>
 <ul>
 <li><a href="https://github.com/kexiZeroing/langchain-llamaindex-ollama">https://github.com/kexiZeroing/langchain-llamaindex-ollama</a></li>
+<li><a href="https://github.com/ollama/ollama/blob/main/docs/faq.md">https://github.com/ollama/ollama/blob/main/docs/faq.md</a></li>
 <li><a href="https://github.com/ollama/ollama-js">https://github.com/ollama/ollama-js</a></li>
 <li><a href="https://github.com/open-webui/open-webui">https://github.com/open-webui/open-webui</a></li>
 <li><a href="https://simonwillison.net/2024/Dec/27/open-webui">https://simonwillison.net/2024/Dec/27/open-webui</a></li>
@@ -398,6 +405,17 @@ while (true) {
 <li><a href="https://github.com/nomic-ai/gpt4all">https://github.com/nomic-ai/gpt4all</a></li>
 </ul>
 </li>
+<li><p>Vercel AI Chatbot Template</p>
+<ul>
+<li><a href="https://github.com/vercel/ai-chatbot">https://github.com/vercel/ai-chatbot</a></li>
+</ul>
+</li>
+<li><p>Transformers.js uses ONNX Runtime to run models in the browser</p>
+<ul>
+<li><a href="https://huggingface.co/docs/transformers.js/index">https://huggingface.co/docs/transformers.js/index</a></li>
+<li><a href="https://huggingface.co/onnx-community">https://huggingface.co/onnx-community</a></li>
+</ul>
+</li>
 </ol>
 <p>You can run any GGUF (GPT-Generated Unified Format), a binary format that is optimized for quick loading and saving of models, on the Hugging Face Hub directly with ollama. All you need to do is:</p>
 <pre><code class="lang-sh"># https://huggingface.co/docs/hub/en/ollama
@@ -406,3 +424,10 @@ ollama run hf.co/{username}/{repository}
 # run the Llama 3.2 1B
 ollama run hf.co/bartowski/Llama-3.2-1B-Instruct-GGUF:latest
 </code></pre>
+<blockquote><p>Mirror site of huggingface.co in China</p>
+<ul>
+<li><a href="https://hf-mirror.com">https://hf-mirror.com</a></li>
+<li><a href="https://zhuanlan.zhihu.com/p/663712983">https://zhuanlan.zhihu.com/p/663712983</a></li>
+</ul>
+<p>DeepSeek's official API platform has been down. You could use either <a href="https://openrouter.ai">OpenRouter</a> or the Chinese equivalent, <a href="https://siliconflow.cn">SiliconFlow</a>.</p>
+</blockquote>
