--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -128,6 +128,7 @@ When your branches diverge, you have to create a commit to "join" the two branch
 <li>diff for a certain folder: git diff master..yourbranch -- path/to/folder</li>
 <li>save in a file: git diff master..develop &gt; my.diff</li>
 <li>diff between a commit and the head: git diff COMMIT</li>
+<li>show what you're about to commit: git diff --cached</li>
 </ul>
 <h2>refuse to merge unrelated histories</h2>
 <p>I always see this error when I create a new Github repository with a README.md or a LICENSE file, then pull it to a local repository at the first time. <code>git pull origin main --allow-unrelated-histories</code> should fix it, which force the merge to happen.</p>
@@ -194,7 +195,7 @@ git rebase -i --autosquash a0b1c2d3~1  # Clean up the history by combining the f
 </li>
 </ul>
 <h2><code>git add -p</code> is underrated</h2>
-<p>Interactively choose hunks of patch between the index and the work tree and add them to the index. This gives the user a chance to review the difference before adding modified contents to the index.</p>
+<p>This is basically "git add partial (or patch)". Patch mode allows you to stage parts of a changed file, instead of the entire file. This allows you to interactively choose hunks of patch between the index and the work tree and add them to the index. This gives the user a chance to review the difference before adding modified contents to the index. Read more at <a href="https://gist.github.com/mattlewissf/9958704">https://gist.github.com/mattlewissf/9958704</a></p>
 <pre><code>y - stage this hunk
 n - do not stage this hunk
 q - quit; do not stage this hunk or any of the remaining ones
@@ -229,6 +230,8 @@ e - manually edit the current hunk
 <li>Use <code>git push origin v1.1.0</code> to push a particular tag, or <code>git push --tags</code> if you want to push all tags.</li>
 <li><code>git push origin :tagname</code> to delete a remote tag, and if you also need to delete the local tag, use <code>git tag --delete tagname</code>.</li>
 </ul>
+<p>Normally, you list tags by alpha order. You can fix this by setting <code>git config --global tag.sort version:refname</code>, which will generally do what you expect, treating dotted version numbers as a series of integer values for sorting purposes.</p>
+<p>Similarly, set <code>git config --global branch.sort -committerdate</code> to sort the branch list by the most recent commit date rather than by alpha order.</p>
 <h2>git submodules</h2>
 <p>A git submodule is a full repo that’s been nested inside another repo. Any repo can be a submodule of another. Submodules can only be pinned to a specific commit. This is because a submodule isn’t a package; it’s code that you have embedded in another repo, and git wants you to be precise.</p>
 <p>Run <code>git submodule init</code> to initialize the submodules. This doesn’t actually download them, though. Run <code>git submodule update</code> to actually pull the submodules. Just do <code>git submodule update --init</code>, which initializes any submodules and updates them in one step.</p>
