--- a/kexizeroing.github.io/HTTP cookies explained and security policy.html
+++ b/kexizeroing.github.io/HTTP cookies explained and security policy.html
@@ -85,7 +85,7 @@ Set-Cookie: mykey=myvalue; SameSite=Strict
 <ul>
 <li>Cookies</li>
 <li>LocalStorage (limited by a 5MB storage cap)</li>
-<li>IndexedDB</li>
+<li>IndexedDB (Dexie.js is a wrapper library for indexedDB)</li>
 <li>OPFS (native browser storage API that allows web applications to manage files)</li>
 <li><a href="https://github.com/sqlite/sqlite-wasm">WASM SQLite</a></li>
 </ul>
@@ -113,6 +113,12 @@ Set-Cookie: mykey=myvalue; SameSite=Strict
 <li>Images from the site's own origin and <code>img.example.com</code></li>
 <li>Styles only from the site's origin.</li>
 </ul>
+<p>The <a href="https://github.com/helmetjs/helmet">Helmet</a> middleware in Express is a security package that helps protect your application by setting various HTTP headers. It helps defend against:</p>
+<ol>
+<li>Cross-site attacks by controlling resource loading and framing</li>
+<li>Network/connection vulnerabilities by enforcing HTTPS and managing DNS settings</li>
+<li>Content-type attacks by preventing MIME-type sniffing and setting proper security policies</li>
+</ol>
 <hr/>
 <h2>iframe 跨域嵌入的实践</h2>
 <p>网站 A 嵌入网站 B，且 A 和 B 是不同域名时，主要需要解决跨域请求 CORS 和 Cookie 的问题。先说预期，我们希望的是 A 网站嵌入 B 网站的同时，B 网站可以正常请求 B 域名的接口和发送 B 域名下的 Cookie。</p>
