--- a/kexizeroing.github.io/Inspirations.html
+++ b/kexizeroing.github.io/Inspirations.html
@@ -9,7 +9,6 @@
 <li>@addyosmani almost every tweet <a href="https://addyosmani.com/blog">https://addyosmani.com/blog</a></li>
 <li>@b0rk wizard zines <a href="https://wizardzines.com">https://wizardzines.com</a></li>
 <li>@EmmaBostian @kvlly ladybug podcast</li>
-<li>@vaidehijoshi basecs and baseds(distributed system)</li>
 <li>@devdevcharlie ML for front-end developers <a href="https://charliegerard.dev/projects">https://charliegerard.dev/projects</a></li>
 <li>@antfu7 about Vue and open source <a href="https://github.com/antfu-collective">https://github.com/antfu-collective</a></li>
 <li>@shadeed9 @5t3ph about CSS</li>
@@ -20,9 +19,9 @@
 <li>@Una Chrome DevRel team</li>
 <li>@rauchg @leeerob at Vercel about DX</li>
 <li>@jlengstorf Learn With Jason <a href="https://www.learnwithjason.dev/episodes">https://www.learnwithjason.dev/episodes</a></li>
-<li>@asidorenko_ short videos about React/Next.js</li>
 <li>@simonw writes notes on <a href="https://simonwillison.net">https://simonwillison.net</a></li>
 <li>@mattpocockuk about TypeScript</li>
+<li>@TAbrodi blog <a href="https://tigerabrodi.blog/archive">https://tigerabrodi.blog/archive</a></li>
 </ul>
 <h2>Learn from mistakes</h2>
 <ol>
