--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -767,6 +767,10 @@ console.log(odds.union(squares)); // Set(6) { 1, 3, 5, 7, 9, 4 }
 <h3>WeakMap</h3>
 <p>An object's presence as a key in a WeakMap does not prevent the object from being garbage collected. Every key of a WeakMap is an object. Primitive data types as keys are not allowed. WeakMap allows garbage collector to do its task but not Map. There is no such thing as a list of WeakMap keys, they are just references to another objects.</p>
 <p>In WeakMaps, references to key objects are held "weakly", which means that they do not prevent garbage collection when there would be no other reference to the object. Because of references being weak, you cannot iterate over its keys or values, cannot clear all items (no clear method), cannot check its size (no size property).</p>
+<ul>
+<li>Map says "I need to keep this object in memory".</li>
+<li>WeakMap says "I'll use this object if it's in memory, but I don't care if it gets cleaned up".</li>
+</ul>
 <pre><code class="lang-js">// Map and Weakmap
 var k1 = {a: 1};
 var k2 = {b: 2};
