--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -1,6 +1,4 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/js-basics-you-should-know.md">仓库源文</a>，<a href="https://kexizeroing.github.io/js-basics-you-should-know">站点原文</a></h2>
-<blockquote><p>You can read this post together with <a href="https://github.com/lydiahallie/javascript-questions">JavaScript Questions</a> created by @lydiahallie to test how well you know JavaScript.</p>
-</blockquote>
 <h2>let and const</h2>
 <p><code>let</code> allows you to declare variables that are limited to a scope of a block statement, unlike the <code>var</code> keyword, which defines a variable globally, or locally to an entire function regardless of block scope. The <code>let</code> <strong>does not create properties of the window object</strong> when declared globally.</p>
 <p><code>const</code> is quite similar to let, it's block-scoped and has TDZ. Variable declared using const can't be re-assigned. You must specify a value when declaring a variable using const.</p>
@@ -164,6 +162,11 @@ console.log(counter.value()); // logs 1
   console.log("This shouldn't be called eh?")  // does not run because throw in catch
 })()
 </code></pre>
+<p>The non-standard <code>stack</code> property of an Error instance offers a trace of which functions were called. The stack string proceeds from the most recent calls to earlier ones, leading back to the original global scope call. Each JavaScript engine uses its own format for stack traces, but they are fairly consistent in their high-level structure.</p>
+<pre><code class="lang-js">function foo() {
+  console.log(new Error().stack);
+}
+</code></pre>
 <h2>Data types</h2>
 <p>number, string, boolean, undefined, null, object, symbol, bigInt</p>
 <pre><code class="lang-js">typeof 37 === 'number'
@@ -238,6 +241,12 @@ Sign: Positive
 <h2>this, globalThis and binding</h2>
 <p>In most cases, the value of <code>this</code> is determined by how a function is called (runtime binding). <code>bind()</code> method can set the value of a function's <code>this</code> regardless of how it's called, and arrow functions which don't provide their own <code>this</code> binding. In non–strict mode, it's always a reference to an object and in strict mode can be any value.</p>
 <p>Historically, accessing the global object has required different syntax in different JavaScript environments. On the web you can use <code>window</code>, <code>self</code>, or <code>frames</code>. In Node.js none of these work, and you must instead use <code>global</code>. The <code>globalThis</code> property provides a standard way of accessing the global <code>this</code> value across environments. In this way, you can access the global object in a consistent manner without having to know which environment the code is being run in.</p>
+<pre><code class="lang-js">const w1 = window;
+const w2 = self;
+const w3 = window.window;
+const w4 = window.self;
+// w1, w2, w3, w4 all strictly equal, but only w2 will function in workers
+</code></pre>
 <ul>
 <li>In strict mode, if the value of <code>this</code> is not set when entering an execution context, it remains as <code>undefined</code>.</li>
 <li>In arrow functions, <code>this</code> retains the value of the enclosing lexical context's <code>this</code>. In global code, it will be set to the global object.</li>
@@ -264,6 +273,14 @@ function Person() {
 
 var p = new Person();
 </code></pre>
+<p>Figure out what the <code>"this"</code> is referencing:</p>
+<ol>
+<li>Is there an object to the left of the dot? If so, that's what the "this" keyword is referencing. (Implicit Binding)</li>
+<li>Was the function invoked with "call", "apply", or "bind"? If so, it'll explicitly state what the "this" keyword is referencing. (Explicit Binding)</li>
+<li>Was the function invoked using the "new" keyword? If so, the "this" keyword is referencing the newly created object that was made by the JavaScript interpreter. (new Binding)</li>
+<li>Is "this" inside of an arrow function? If so, its reference may be found lexically in the enclosing scope. (Lexical Binding)</li>
+<li>Are you in "strict mode"? If yes, the "this" keyword is undefined. If not, "this" is referencing the "window" object. (window Binding)</li>
+</ol>
 <h3>Function.prototype.call() / apply()</h3>
 <p>While the syntax of <code>call()</code> function is almost identical to that of <code>apply()</code>, the fundamental difference is that <code>call()</code> accepts an argument list, while <code>apply()</code> accepts a single array of arguments (or an array-like object). They provide a new value of <code>this</code> to the function. With call or apply, you can write a method once and then inherit it in another object, without having to rewrite the method for the new object. If the first argument is not passed, the value of <code>this</code> is bound to the global object (the value of <code>this</code> will be undefined in strict mode).</p>
 <pre><code class="lang-js">const numbers = [5, 6, 2, 3, 7];
