--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -12,14 +12,19 @@ npx shadcn-ui@latest init
 <pre><code class="lang-sh"># nuxt@latest also works. `nuxi` is the cli package, it's minimal and fast to download
 # When you install nuxt, it re-exports nuxi as both `nuxi` and `nuxt`
 npx nuxi@latest init my-app
+
+# You can build SPA with Nuxt, similar to Vite+Vue but with the power of the Nuxt ecosystem.
+# nuxt.config.js
+export default {
+  ssr: false
+}
 </code></pre>
 <p>Start with templates:</p>
 <ul>
-<li>Awesome Vite: <a href="https://github.com/vitejs/awesome-vite">https://github.com/vitejs/awesome-vite</a></li>
-<li>A Next.js 13 template for building apps with Radix UI and Tailwind CSS: <a href="https://github.com/shadcn-ui/next-template">https://github.com/shadcn-ui/next-template</a></li>
-<li>Vercel pre-built solutions: <a href="https://vercel.com/templates">https://vercel.com/templates</a></li>
-<li>An example deploying Next / Postgres / Nginx to a Ubuntu Linux server: <a href="https://github.com/leerob/next-self-host">https://github.com/leerob/next-self-host</a></li>
-<li>Admin Dashboard Starter with Nextjs14 and shadcn ui: <a href="https://github.com/Kiranism/next-shadcn-dashboard-starter">https://github.com/Kiranism/next-shadcn-dashboard-starter</a></li>
+<li><a href="https://github.com/vitejs/awesome-vite">https://github.com/vitejs/awesome-vite</a></li>
+<li><a href="https://vercel.com/templates">https://vercel.com/templates</a></li>
+<li><a href="https://github.com/TanStack/create-tsrouter-app">https://github.com/TanStack/create-tsrouter-app</a></li>
+<li><a href="https://nextjs.org/blog/building-apis-with-nextjs">https://nextjs.org/blog/building-apis-with-nextjs</a></li>
 </ul>
 <p>A typical full stack web application with Next.js, React, shadcn/ui, Prisma, and MySQL:</p>
 <ul>
