--- a/kexizeroing.github.io/Type challenges solutions.html
+++ b/kexizeroing.github.io/Type challenges solutions.html
@@ -1,6 +1,7 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/type-challenges-solutions.md">仓库源文</a>，<a href="https://kexizeroing.github.io/type-challenges-solutions">站点原文</a></h2>
 <h2>Type challenges</h2>
 <blockquote><p>TypeScript allows you to write complex yet elegant code. Some TypeScript users love to explore the possibilities of the type system and love to encode logic at type level. This practice is known as type gymnastics. The community also helps users to learn type gymnastics by creating fun and challenges such as <a href="https://github.com/type-challenges/type-challenges">type challenges</a>.</p>
+<p>Note that some features are primarily useful when building libraries. App dev TS is and should be very different from lib dev TS.</p>
 </blockquote>
 <p>Implement the built-in <code>Pick&lt;T, K&gt;</code> generic without using it. Constructs a type by picking the set of properties K from T.</p>
 <pre><code class="lang-ts">interface Todo {
