--- a/kexizeroing.github.io/Understand the event loop.html
+++ b/kexizeroing.github.io/Understand the event loop.html
@@ -148,3 +148,19 @@ while (tasks.length &gt; 0) {
 </code></pre>
 <blockquote><p>The api and implementation is the result of a multi year collab effort between (meta) the react team and (google) chrome, and underpins react’s concurrent mode. Now being implemented in browsers as a standard.</p>
 </blockquote>
+<pre><code class="lang-js">// Here is how you can "defer" a slow operation in JS
+const onIdle = (fn) =&gt; {
+  if ('scheduler' in window) {
+    return scheduler.postTask(fn, {
+      priority: 'background'
+    });
+  }
+  if ('requestIdleCallback' in window) {
+    return requestIdleCallback(fn);
+  }
+
+  setTimeout(fn, 0);
+};
+
+onIdle(() =&gt; slowFunction());
+</code></pre>
