--- a/kexizeroing.github.io/Using Blob and ArrayBuffer in JavaScript.html
+++ b/kexizeroing.github.io/Using Blob and ArrayBuffer in JavaScript.html
@@ -152,3 +152,22 @@ const emptyBuf = Buffer.alloc(10);
 
 // Output: &lt;Buffer 00 00 00 00 00 00 00 00 00 00&gt;
 </code></pre>
+<h3>Different ways to convert an image URL to Base64</h3>
+<pre><code class="lang-js">async function urlToBase64(url) {
+  const response = await fetch(url);
+  const arrayBuffer = await response.arrayBuffer();
+  const base64 = Buffer.from(arrayBuffer).toString('base64');
+  return base64; // Raw Base64 string without the "data:image/jpeg;base64," prefix
+}
+</code></pre>
+<pre><code class="lang-js">async function urlToBase64(url) {
+  const response = await fetch(url);
+  const blob = await response.blob();
+  return new Promise((resolve, reject) =&gt; {
+    const reader = new FileReader();
+    reader.onloadend = () =&gt; resolve(reader.result);
+    reader.onerror = reject;
+    reader.readAsDataURL(blob); // Base64-encoded data URI, including the MIME type prefix
+  });
+}
+</code></pre>
