--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -185,7 +185,11 @@ export const foo = cjsModule.foo;
 </code></pre>
 </li>
 </ol>
+<h3>Requiring ESM in Node.js</h3>
+<p>The capability to <code>require()</code> ESM modules in Node.js marks an incredible milestone. This feature allows packages to be published as ESM-only while still being consumable by CJS codebases with minimal modifications.</p>
 <p><strong>Updates for Node.js 22:</strong> Support for require()ing ESM graphs is now enabled through experimental flag. We intend to enable it by default in the future to allow package authors to publish ESM-only packages while maintaining support for CJS users, and help the ecosystem migrate to ESM incrementally.</p>
+<blockquote><p>Update: In the release of version 22.12.0, it is now no longer behind a flag on v22.x. Users can check <code>process.features.require_module</code> to see whether <code>require(esm)</code> is enabled in the current Node.js instance.</p>
+</blockquote>
 <pre><code class="lang-js">// Define a module in a file named 'math-utils.mjs'
 export function square(x) {
   return x ** 2;
@@ -198,5 +202,3 @@ const mathUtils = require('./math-utils.mjs');
 console.log(mathUtils.square(2));
 </code></pre>
 <p>Node 23 was released on Oct 2024 that you can now <code>require()</code> files that use ESM (import/export), which lets you import an ES Module in CommonJS and have it just work. Previously, if you wanted to use a “module” from your CommonJS file, you would need to do use dynamic import <code>await import('some/module/file.mjs')</code> and you can’t just put this at the top of your file.</p>
-<blockquote><p>Update: In the release of version 22.12.0, it is now no longer behind a flag on v22.x. Users can check <code>process.features.require_module</code> to see whether <code>require(esm)</code> is enabled in the current Node.js instance.</p>
-</blockquote>
