--- a/babyno.top/文颜支持自定义主题.html
+++ b/babyno.top/文颜支持自定义主题.html
@@ -14,18 +14,21 @@
 <p>用户可以创建3套个性化的“自定义主题”，以创造3种不同的视觉体验。</p>
 <h2>创建主题</h2>
 <p>在主题选择菜单点击“创建新主题”按钮。</p>
-<p>&lt;img src="/imgs/posts/2024-11-06-wenyan-supports-customized-themes/1.webp" width="50%"&gt;</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/1.webp"/>
+{width=45}</p>
 <p>此时会弹出一个“主题编辑和预览”页面，你可以在左侧编辑器中自定义<code>CSS</code>，右侧预览页面可以实时进行效果预览。</p>
-<p><img alt="alt text" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/2.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/2.webp"/></p>
 <p>最后保存即可。</p>
 <h2>使用主题</h2>
 <p>保存的自定义主题可以在主题菜单直接选择使用。</p>
-<p>&lt;img src="/imgs/posts/2024-11-06-wenyan-supports-customized-themes/3.webp" width="50%"&gt;</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/3.webp"/>
+{width=45}</p>
 <h2>修改和删除主题</h2>
 <p>点击“自定义主题”边上的编辑按钮，会弹出“主题编辑和预览”页面，和创建主题一样。</p>
-<p>&lt;img src="/imgs/posts/2024-11-06-wenyan-supports-customized-themes/4.webp" width="50%"&gt;</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/4.webp"/>
+{width=45}</p>
 <p>如果要删除主题，点击“删除”按钮。</p>
-<p><img alt="alt text" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/5.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/5.webp"/></p>
 <h2>小贴士</h2>
 <h3>引用块美化</h3>
 <p><code>h1, h2, h3, h4, h5, h6, blockquote</code>这几个标签可以与<code>::before</code>和<code>::after</code>伪元素配合实现前、后缀效果。让我们看个例子，给引用块添加一个彩虹图标前缀：</p>
@@ -38,7 +41,8 @@
 }
 </code></pre>
 <p>效果：</p>
-<p>&lt;img src="/imgs/posts/2024-11-06-wenyan-supports-customized-themes/6.webp" width="50%"&gt;</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/6.webp"/>
+{width=50}</p>
 <p>再比如给引用块添加两个引号：</p>
 <pre><code class="lang-css">#wenyan blockquote::before {
     position: absolute;
@@ -64,7 +68,8 @@
 }
 </code></pre>
 <p>效果：</p>
-<p>&lt;img src="/imgs/posts/2024-11-06-wenyan-supports-customized-themes/13.webp" width="50%"&gt;</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/13.webp"/>
+{width=50}</p>
 <h3>标题美化</h3>
 <p>可以给标题添加任意前后缀，比如添加一个<code>svg</code>图片：</p>
 <pre><code class="lang-css">#wenyan h2::before {
@@ -81,7 +86,8 @@
 }
 </code></pre>
 <p>效果：</p>
-<p>&lt;img src="/imgs/posts/2024-11-06-wenyan-supports-customized-themes/12.webp" width="50%"&gt;</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/12.webp"/>
+{width=30}</p>
 <h3>修改字体</h3>
 <p>文颜默认使用用户系统的默认字体，如果你想使你的文章看起来更独特，可以考虑修改默认字体。比如：将字体修改为系统自带的“华文仿宋”：</p>
 <pre><code class="lang-css">/* 全局变量 */
@@ -91,7 +97,7 @@
 }
 </code></pre>
 <p>效果：</p>
-<p><img alt="alt text" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/7.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/7.webp"/></p>
 <p><strong><em>注意：修改字体会影响未安装该字体的用户的阅读体验，因此请确保你有一定该方面的经验，保留保底字体。</em></strong></p>
 <p><strong><em>注意：目前不支持<code>web字体</code>，即url引入的字体。</em></strong></p>
 <h3>背景图案</h3>
@@ -105,14 +111,15 @@
 }
 </code></pre>
 <p>效果：</p>
-<p><img alt="alt text" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/9.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/9.webp"/></p>
 <p>此外你也可以给背景添加网络图片，比如：</p>
 <pre><code class="lang-css">#wenyan {
     background-image: url("https://marketplace.canva.com/EAGPIDVZ0-A/1/0/1131w/canva-peach-aesthetic-background-flyer-IqGDJ_simvM.jpg");
 }
 </code></pre>
 <p>效果：</p>
-<p>&lt;img src="/imgs/posts/2024-11-06-wenyan-supports-customized-themes/14.webp" width="50%"&gt;</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/14.webp"/>
+{width=50}</p>
 <h3>表格样式</h3>
 <p>以下几个属性可以修改表格样式：</p>
 <pre><code class="lang-css">#wenyan table {
@@ -171,9 +178,11 @@
 }
 </code></pre>
 <p>添加在原始链接旁的脚注上标：</p>
-<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/10.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/10.webp"/>
+{width=75}</p>
 <p>脚注行：</p>
-<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/11.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/11.webp"/>
+{width=80}</p>
 <h3>行内代码</h3>
 <pre><code class="lang-css">#wenyan p code {
     font-family: var(--monospace-font);
@@ -219,15 +228,17 @@
 </ul>
 <h2>微调内置主题</h2>
 <p>从版本<code>2.3</code>开始(<code>Windows</code>版<code>2.2</code>)，文颜开放了内置主题，你可以在任意内置主题的基础上生成自定义主题，并进行微调。以下是操作示例：</p>
-&lt;video controls&gt;
-    &lt;source src="https://yuzhi.tech/img/wenyan/custom_css.mp4" type="video/mp4"&gt;
-    Your browser does not support the video tag.
-&lt;/video&gt;<h2>导入外部主题</h2>
+&lt;p&gt;
+    &lt;video controls&gt;
+        &lt;source src="https://yuzhi.tech/img/wenyan/custom_css.mp4" type="video/mp4"&gt;
+    &lt;/video&gt;
+&lt;/p&gt;<h2>导入外部主题</h2>
 <p>从版本<code>2.3</code>开始(<code>Windows</code>版<code>2.2</code>)，文颜支持导入外部<code>CSS</code>转换为自定义主题。对于成熟社区大量已有的主题可以直接导入，迅速形成自己的主题。以下是操作示例：</p>
-&lt;video controls&gt;
-    &lt;source src="https://yuzhi.tech/img/wenyan/import_css.mp4" type="video/mp4"&gt;
-    Your browser does not support the video tag.
-&lt;/video&gt;<h2>属性速查</h2>
+&lt;p&gt;
+    &lt;video controls&gt;
+        &lt;source src="https://yuzhi.tech/img/wenyan/import_css.mp4" type="video/mp4"&gt;
+    &lt;/video&gt;
+&lt;/p&gt;<h2>属性速查</h2>
 <p>所有属性可以在下面的网页查询到：<a href="https://yuzhi.tech/docs/wenyan/themes">属性速查表</a>。</p>
 <h2>最后</h2>
 <p>问题讨论请移步<a href="https://github.com/caol64/wenyan/discussions/9">github discussions</a>。</p>
