--- a/codeinchinese.com/Rust 在线摸索（十二）：泛型之where、反面代码初探.html
+++ b/codeinchinese.com/Rust 在线摸索（十二）：泛型之where、反面代码初探.html
@@ -65,7 +65,7 @@ fn main() {
     &lt;U as ServiceFactory&lt;(Request&lt;Pin&lt;Box&lt;dyn Stream&lt;Item = Result&lt;Bytes, PayloadError&gt;&gt; + 'static, Global&gt;&gt;&gt;, Framed&lt;T, Codec&gt;)&gt;&gt;::Error: Into&lt;Response&lt;BoxBody&gt;&gt;,
     &lt;U as ServiceFactory&lt;(Request&lt;Pin&lt;Box&lt;dyn Stream&lt;Item = Result&lt;Bytes, PayloadError&gt;&gt; + 'static, Global&gt;&gt;&gt;, Framed&lt;T, Codec&gt;)&gt;&gt;::InitError: Debug,
 </code></pre>
-<p><a href="https://cseweb.ucsd.edu/classes/sp22/cse223B-a/tribbler/src/actix_http/h1/service.rs.html#269-333）的这段内容与 github [此段代码](https://github.com/actix/actix-web/blob/b0fe67978485b43ea11ff817dc5afaac4a12559f/actix-http/src/h1/service.rs#L446">src 链接</a> 相同：</p>
+<p><a href="https://cseweb.ucsd.edu/classes/sp22/cse223B-a/tribbler/src/actix_http/h1/service.rs.html#269-333">src 链接</a> 的这段内容与 github <a href="https://github.com/actix/actix-web/blob/b0fe67978485b43ea11ff817dc5afaac4a12559f/actix-http/src/h1/service.rs#L446">此段代码</a> 相同：</p>
 <pre><code class="lang-rust">impl&lt;T, S, B, X, U&gt; ServiceFactory&lt;(T, Option&lt;net::SocketAddr&gt;)&gt; for H1Service&lt;T, S, B, X, U&gt;
 where
     T: AsyncRead + AsyncWrite + Unpin + 'static,
