--- a/f2h2h1.github.io/ACME的使用经验.html
+++ b/f2h2h1.github.io/ACME的使用经验.html
@@ -100,7 +100,7 @@ acme.sh --list-archive
 ```
 --&gt;
 
-<p>查看已安装证书的信息</p>
+<p>查看已安装证书的信息，这个命令可以查看配置文件的位置，可以通过修改配置文件修改安装证书时的参数，例如证书的位置，服务器的重启命令</p>
 <pre><code>acme.sh --info -d www.example.com
 </code></pre>
 <p>删除证书</p>
