--- a/f2h2h1.github.io/_draft.html
+++ b/f2h2h1.github.io/_draft.html
@@ -261,15 +261,20 @@
                 fastcgi
             代理
                 socket 双写
-                反向代理
-                正向代理
-                    RFC 2616
-                    RFC 7230
-                    RFC 7231
-                    RFC 1928 SOCKS5
+                位置
+                    反向代理
+                    正向代理
+                类型
+                    http代理
+                        RFC 2616 7230 7231 7235
+                    sockt代理
+                        RFC 1928 SOCKS5
                     pac
+                        https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Proxy_servers_and_tunneling
             websocket
                 WebSocket Secure (wss)
+            相关的rfc
+                https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Resources_and_specifications
             认证 和 授权
             流量控制
         TLS
@@ -357,12 +362,13 @@
         计算模型 -&gt; 计算机系统架构 -&gt; 指令集 -&gt; 微架构
         寄存器机 -&gt; 冯诺依曼架构 -&gt; x86指令集 -&gt; Zen4
         冯诺依曼结构
-            以运算单元为中心
-            数据和指令都以二进制编码
-            数据和指令不加区别混合存储在同一个存储器中
-            指令由操作码和地址码组成
-            顺序执行程序的每一条指令
-            由五个部件构成
+            特点
+                以运算单元为中心
+                数据和指令都以二进制编码
+                数据和指令不加区别混合存储在同一个存储器中
+                指令由操作码和地址码组成
+                顺序执行程序的每一条指令
+            组成 由五个部件构成
                 运算器 控制器 存储器 输入设备 输出设备
             为什么顺序执行也可以算作冯诺依曼结构特点之一？
         计算问题（Computational problem）
@@ -751,6 +757,8 @@ frp的使用
     hello算法，一个非常好的 数据结构和算法的教程
         https://github.com/krahets/hello-algo
         https://www.hello-algo.com
+    labuladong 的算法笔记 刷算法全靠套路 https://github.com/labuladong/fucking-algorithm
+    《代码随想录》LeetCode 刷题攻略 https://github.com/youngyangyang04/leetcode-master
     ctf wiki https://github.com/ctf-wiki/ctf-wiki
     并行计算的 wiki 和 oi wiki ctf wiki 差不多 https://github.com/lcpu-club/hpc-wiki
     演算法笔记：台湾师范大学总结的教程 https://web.ntnu.edu.tw/~algo/
@@ -934,9 +942,15 @@ vscode的使用技巧
         修改 ua
         构造完整的请求包
         使用代理来规避请求频率的限制
+            尽量使用住宅ip
+            ip数量要尽量地多，且每个ip要限制访问速度和频率
+                即使住宅ip也有可能被拉近黑名单
         使用无头浏览器来执行 js
-        即使速度慢也加载图片
         使用 playwright 这类工具打开页面，显示窗口，修改ua
+            检测浏览器爬虫特征 https://bot.sannysoft.com/
+            检测浏览器指纹 https://abrahamjuliot.github.io/creepjs/
+            技术足够的话，可以修改浏览器内核来隐藏爬虫特征
+        即使速度慢也加载图片
         使用 autoit 这类工具模拟鼠标在页面上的移动
         打开页面后要模拟一下人的操作，例如 移动一下鼠标 移动一下滚动条
         应对验证码
@@ -1391,6 +1405,7 @@ vscode的使用技巧
             面试时太紧张了，未能完整地向招聘的企业展示自己的能力
             一些情况下 OverQuality 也是面试失败的原因
         客观的原因
+            低代码 和 ai 的发展使得工作岗位减少
             市场已经萎缩 这是根本原因
                 求职者多，岗位少
                 招聘的企业会不断地提高入职的门槛，即使远超岗位要求
@@ -1660,6 +1675,7 @@ vscode的使用技巧
         如无意外，安装完后就能直接用 sendmail mail mailx 命令了
             mail 和 mailx 链接到 mail.mailutils
             sendmail 链接到 exim4
+            增加一个用户 useradd -m user1
         发送邮件给其它用户
             使用 mailx 命令发送
             echo "test mail content" | mailx -s "test mail subject" root
@@ -1677,13 +1693,16 @@ vscode的使用技巧
             mail -u root
             mail -u 用户名
             mail -f /var/spool/mail/mail
+            mail -f /var/mail/mail root用户要用这种方式才能查看接收的邮件
             mail -f 用于保存邮件的文件路径
+            mail -f /var/mail/user1
         邮件保存的位置
             目录
                 /var/spool/mail 这个目录会软连接到 /var/mail
                 /var/mail 这个是实际的目录
             文件
                 /var/mail/root
+                /var/mail/mail
                 /var/mail/用户名
         日志
             日志文件的目录
@@ -1694,12 +1713,26 @@ vscode的使用技巧
                 ls -l /var/log/exim4
                 mkdir -p /var/log/exim4
                 touch /var/log/exim4/mainlog
+                chmod 777 /var/log/exim4/mainlog
             查看日志
                 cat /var/log/exim4/mainlog
     在局域网里自娱自乐
         至少需要搭建 smtp 和 imap
             至少要开启这两个端口 smtp(25) imap(143)
-            最好再加上这两个 smtps(465) imaps(993)
+            最好再加上这两个 smtps(587) imaps(993)
+            还有这几个 smtps(465) pop3(110) pop3s(995) smtp(2525)
+                587 才是标准的 smtps 端口 rfc3207
+                465 比 587 更早出现
+                    465 是一开连接就启用 tls
+                    465 很长一段时间都不是标准，直到 rfc8314
+                    587 是连接完成后再通过 STARTTLS命令 启用 tls
+                        除了 smtps 之外，还有不少的协议使用这种明文命令的形式启用 tls
+                        这种 tls 被称为 机会型TLS（Opportunistic TLS）
+                有些电子邮件服务通过端口 2525 提供 SMTP 传输。但它并不是电子邮件的标准端口
+        假设已经安装好 exim
+            修改配置文件
+            启动
+            尝试通过ip发送邮件
     能收发外网的邮件
         除了 搭建 smtp 和 imap 之外，还要做好域名的解释
         域名解释才是最困难的部分
@@ -1746,24 +1779,6 @@ vscode的使用技巧
                     兼容一部分 sendmail 的命令
                 exim4
                     兼容一部分 sendmail 的命令
-    php 发送邮件示例
-        使用原本的函数
-            mail 和 mb_send_mail 函数
-            windows 环境
-            linux 环境
-            关注 sendmail 这个命令
-        使用第三方库
-            https://github.com/PHPMailer/PHPMailer
-            https://github.com/symfony/mailer
-            https://github.com/laminas/laminas-mail
-            https://github.com/zetacomponents/Mail
-    使用命令行发送邮件
-        nc smtp.qq.com 25
-        telnet smtp.qq.com 25
-        openssl s_client -quiet -connect smtp.qq.com:465
-        sendmail
-        busybox sendmail
-        curl
 如何实现一个搜索引擎？
     搜索引擎的原理
         倒排索引
@@ -3539,6 +3554,11 @@ composer
     参考
         https://github.com/lavas-project/pwa-book
         https://lavas-project.github.io/pwa-book/
+    要怎样才能知道当前有多少缓存？
+    如何制作一个 安卓套壳app
+        调用系统内的 webview
+        自包含一个 Chromium
+        在套壳里的 pwa
 前端的模块化方案
     早期的解决方式
         闭包
@@ -3843,6 +3863,14 @@ linux 中的各种 id
             deferred v. 延期
         async/await
         规范 Promises/A+ https://promisesaplus.com/
+        js中的异步编程和 Promises/A+ 规范
+            回调
+            事件监听 观察者模式 发布订阅模式
+            Promises async/await
+            生成器
+            响应式编程
+            jQuery 的 deferred
+            ES6 中的原生 Promise
 多进程 和 多线程 和 协程
     多进程讲究的是进程间通讯
         管道 pipe
@@ -4042,6 +4070,12 @@ ELF格式
     查看文件格式 `file 文件路径`
     查看 elf 文件类型 `readelf -h 文件路径`
     32位和64位的格式会有一些差异
+如何判断自己是否学会了某一项技能？
+    特别是数学相关的？
+        感觉看原理时一看就懂，实践时一做就错
+从零开始学习数学建模
+    我总想找到一种方法来应对所有类型的算法面试题
+    或者说我总想找到一种方法来应对所有考试时遇到的数学题
 leetcode做题的一般套路
     要把问题抽象成数学问题
         要抽象成类似这样的函数
@@ -4051,6 +4085,11 @@ leetcode做题的一般套路
             处理输入
             格式化输出
         多数 leetcode 的题目都会自动处理好第一步和第三步
+        实际面试时可能依然要自己处理输入和输出
+            代码随想录里把
+                不需要处理输入输出的称为 核心模式
+                需要处理输入输出的称为 ACM模式
+                https://github.com/youngyangyang04/leetcode-master/blob/master/problems/%E5%89%8D%E5%BA%8F/ACM%E6%A8%A1%E5%BC%8F.md
     要准确地理解问题，然后选择正确的数据结构和算法
     先学好理论再去做题
     如果一道题一直没思路就直接看答案
@@ -4099,6 +4138,7 @@ leetcode做题的一般套路
 动态规划(Dynamic programming, DP)
     递归
     深度优先搜索
+    贪心
     回溯和剪支
         回溯算法在尝试和回退中穷举所有可能的解，并通过剪枝避免不必要的搜索分支
     记忆化递归
@@ -4112,6 +4152,22 @@ leetcode做题的一般套路
     通常情况下使用 记忆 需要更多的内存，
         在力扣刷题时，一些题目有内存限制，使用 记忆 可能会无法通过，
         但存在一些问题 制表 是无法解决的，依然需要使用 记忆 的方法
+    例题
+        斐波那契数列
+        背包问题 （Knapsack Problem）
+            题干
+                假设有一个背包，
+                能够承载的最大重量为 W，
+                同时有 n 个物品，每个物品 i 具有一个重量 wi​ 和一个价值 vi​。
+                目标是选择一些物品放入背包中，使得所选物品的总重量不超过 W，并且总价值最大化。
+            分类
+                0-1背包
+                    如果限定每种物品只能选择0个或1个，则问题称为0-1背包问题
+                完全背包/无界背包问题
+                    如果不限定每种物品的数量，则问题称为无界背包问题
+                多重背包/有界背包问题
+                    如果限定物品j最多只能选择bj个，则问题称为有界背包问题
+    现有循环，后有表格，表格就是两层循环的数组展开后的结果
 数据分析/机器学习/数据挖掘/数据科学/大数据
     名词
         artificial intelligence AI
@@ -4267,22 +4323,114 @@ leetcode做题的一般套路
             将符号人工智能命名为GOFAI（Good Old-Fashioned Artificial Intelligence，指的是“有效的老式人工智能）。
             在机器人学领域 ，类似的术语是GOFR （“有效的老式机器人学”）。
             https://en.wikipedia.org/wiki/GOFAI
+        支持向量机 (Support Vector Machine, SVM)
     神经网络（neural network）
     深度学习（Deep Learning）
     大语言模型（Large Language Model, LLM）
         提示工程（Prompt Engineering）
-        AI Agent/bot/Generative AI
+        AI Agent/bot/Generative AI/上下文窗口/微调/RAG/MOE
+            微调（Fine-Tuning，FT）是再训练一次并加入新数据
+            rag是在上下文或提示词里加入新数据
+                rag 就是 知识库
+            AI Agent 就是 bot
+                提示工程 是 Agent
+                rag 是 Agent
+            插件 就是 调用外部api
+                在 工作流 里会用到 插件
+            工作流 就是 字面意思
+                和 cicd 里的工作流是一样的，只是过程中有大模型的参与
+                参考一下腾讯的 混元 元宝 元器
+        满血版&gt;满血版量化&gt;蒸馏版&gt;量化版(蒸馏量化版)
+            满血就是没经过改动的
+            量化就是可以运行在内存里的
+            蒸馏就是阉割版
+            量化版，一般语境下的量化版就是蒸馏量化版，就是可以运行在内存里的蒸馏版
+            ollama 下载的都是量化版
+            满血或蒸馏版
+                显存 大于 模型的尺寸
+            量化版
+                显存+内存 大于 模型的尺寸
         那些生成图片，生成视频的模型和LLM有什么关系？
+        chat模型 和 embedding模型 有什么区别？
+        模态
+            输入或输出的类型，例如 文本 文档 图片 视频 音频
+            多模态 可以接收多种输入类型或可以输出多种类型
+        局限性
+            幻觉
+            偏差
+    著名的公司
+        ai 四巨头
+            openai 谷歌 Anthropic xai
+            Anthropic 就是那个 Claude
+            Anthropic 是由 openai 前员工创立的
+            xai 就是 马斯克 那个 Grok
+            DeepMind 就是做 AlphaGo 那个，现在是 谷歌的全资子公司
+        国内的
+            幻方量化/深度求索
+            百度 阿里 腾讯 字节 华为 科大讯飞 月之暗面 太多了，几乎所有公司都有大模型
+            四小龙
+                商汤、旷视、云从、依图
+            五虎？
+                四小龙 + ？
+    热门的大模型
+        gpt 2022
+        deepseek 2024
+        Claude
+        Grok
+        Gemini
+        LLaMA mate
+        Phi 微软的
+        BLOOM 来自法国的，也是开源的
+        Mistral 来自法国的，也是开源的
+        通义千问
+        文心一言
+        豆包 字节
+        kimi 月之暗面
+        混元
+        星火 科大讯飞
+        大模型的排行榜
+            https://github.com/jeinlee1991/chinese-llm-benchmark
+            https://www.superclueai.com/
+            https://super.gluebenchmark.com/leaderboard
+            https://web.lmarena.ai/leaderboard
+            https://cevalbenchmark.com/static/leaderboard_zh.html
+            https://llm-stats.com/
+    应用
+        生成文本 对话 生成图片 生成视频 生成音频 视频换脸
+    有影响力的人
+        AI 三巨头
+            Geoffrey Hinton：中文名是 杰弗里·辛顿
+            Yann LeCun：中文名是 杨立昆
+            Yoshua Bengio：中文名是 约书亚·本吉奥
+        华人
+            李开复
+            李宏毅
+            李飞飞
+            吴恩达
+            陆奇
+            黄仁勋
+            苏姿丰
+            梁见后 超微电脑（Super Micro Computer） 主要是做服务器的
+            梁文峰
+    相关的框架
+        Torch
+        TensorFlow
+        Keras
+        ML.NET
+        Apache SINGA
+        Apache Spark MLlib
     相关的书籍和仓库
         Deep Learning 中文翻译 https://github.com/exacity/deeplearningbook-chinese
         深度学习500问 https://github.com/scutan90/DeepLearning-500-questions
         数学要素 https://github.com/Visualize-ML/Book3_Elements-of-Mathematics
             这是一套系列丛书，一共有七本 https://github.com/Visualize-ML/Book3_Elements-of-Mathematics/blob/main/鸢尾花书_整体布局.pdf
         如何入门人工智能科研 https://github.com/WengLean/hands-on-research-tutorial
+        动手学深度学习（Dive into Deep Learning，D2L.ai） https://github.com/d2l-ai/d2l-zh
         ApacheCN
             https://github.com/apachecn/Interview
             https://github.com/apachecn/ailearning
             https://github.com/apachecn/ai-roadmap
+        AI工具集 https://ai-bot.cn/
     Kaggle
         这是一个类似 leetcode 的平台，题目内容是数据分析相关的
         官网 https://www.kaggle.com/
@@ -4782,6 +4930,7 @@ linux 应用的一般启动套路
         （现在我似乎有一点理解为什么 Gentoo 会坚持编译安装软件了）
     程序配置的时机
         编译时，安装时，启动时，运行时
+        启动时的配置还可以再细分为 可以通过重载配置更新 和 不可以通过重载配置更新
 垃圾回收
     什么是垃圾
     为什么要进行垃圾回收
@@ -5001,6 +5150,12 @@ wordpress
                 wp server --host=127.0.0.1 --port=80
             忘记密码后用来修改密码的， 1 是userid
                 php wp-cli.phar user update 1 --user_pass=password
+            wp option 修改 wp 的配置，这是对应 wp_options 表的
+                wp option list
+                wp option get {key}
+                wp option add {key} {value}
+                wp option update {key} {value}
+                wp option delete {key}
         如果是使用 composer exec 来运行 wp server 则需要设置 compoer 的 timeout ， composer 的 timeout 默认是 300 秒
             通过配置文件设置
                 {
@@ -5010,6 +5165,7 @@ wordpress
                 }
             通过环境变量设置
             export COMPOSER_PROCESS_TIMEOUT=0
+            COMPOSER_PROCESS_TIMEOUT=0 wp server --host=127.0.0.1 --port=80
     WooCommerce 安装和配置
         示例数据
             商品数据
@@ -5138,6 +5294,15 @@ wordpress
             https://wordpress.org/support/topic/configuring-wordpress-with-postgresql/
             https://github.com/PostgreSQL-For-Wordpress/postgresql-for-wordpress
     如何寻找前1000个用户 https://github.com/naxiaoduo/1000UserGuide
+    wordpress 和 Automattic 和 wpengine 之间的关系
+        wordpress 是开源原软件，由 wordpress基金会管理
+            https://wordpress.org/
+            https://wordpressfoundation.org/
+        Automattic是一家网页程序设计公司，成立于2005年8月
+            主要的产品有 wordpress.com 和 tumblr
+            Automattic会定期向wordpress贡献代码
+            WordPress.com 的免费版不能装插件
+        wpengine 类似 WordPress.com 也提供 wordpress 的托管服务
 接入 alipay+ 的过程
     注册和设置
     支付
@@ -5239,13 +5404,13 @@ wordpress
         存储层次结构
     存储介质
         光学
-            光盘
+            光盘 optical disc
                 cd dvd 蓝光
         磁性
-            磁盘
-                硬盘
-                软盘
-            磁带
+            磁盘 disk
+                硬盘 hard disk
+                软盘 soft disk
+            磁带 tape
         半导体
             Flash memory （闪存）
         其它
@@ -5398,6 +5563,7 @@ nas
             使用hls
     除了视频之外还可以继续有 音频 图片 文档 漫画 小说 游戏等等
     更多？
+        成品 or DIY ？
         连接其它设备？物联网？智能家电？软路由？htpc？电视机顶盒？游戏主机？HomeLab？all in one？算存网分离？
             忽略 猫 和 路由 ？
         始终至少需要一个外网的服务器
@@ -5409,6 +5575,9 @@ nas
         放在哪里？体积？噪声？辐射？
         费用？
             硬件费用，电费，网费
+    中年男人三大爱好
+        nas 路由器 充电器
+        路由器 和 充电器 有什么好折腾的？
 和声音相关的笔记
     声音
         声音是振动产生的声波，通过介质（气体、固体、液体）传播并能被人或动物听觉器官所感知的波动现象
@@ -5598,6 +5767,26 @@ nas
         礼、乐、射、御、书、数
         四书五经六艺
         汉代以来六艺亦指六经，即诗、书、礼、乐、易、春秋
+艺术
+    视觉艺术
+        游戏
+            游戏是第九艺术？
+            五
+                建筑、雕塑、绘画、音乐、诗歌
+            六
+                建筑、雕塑、绘画、音乐、诗歌、舞蹈
+            七
+                建筑、雕塑、绘画、音乐、诗歌、舞蹈、电影
+            八
+                建筑、雕塑、绘画、音乐、诗歌、舞蹈、戏剧、电影
+            九
+                电游，中国人吴冠军于1997年指称电子游戏为第九艺术，此说流行于中国。
+                漫画，法国评论家Claude Beylie于1964年和评论家弗朗西斯·拉卡森于1971年指称漫画为第九艺术，此说流行于欧美。
+            总而言之游戏也是一种艺术
+    表演艺术
+    文学
+    生活方式
+        烹饪 茶艺 调酒 咖啡 香水
 天文（Astronomy）
     天体测量学（Astrometry） 研究天体运行的精确计算，预测日食或流星雨等现象
     天体力学（Celestial mechanics） 研究天体的力学运动和形状
@@ -5621,6 +5810,7 @@ nas
         暗物质 暗能量
         黑洞
         宇宙起源 生命起源 意识起源
+        还有反物质
     社会学 -&gt; 心理学 -&gt;  医学 -&gt; 生物 -&gt; 化学 -&gt; 物理 -&gt; 数学
     经济 -&gt; 政治 -&gt; 历史 -&gt; 人类学 -&gt; 医学 -&gt; 生物 -&gt; 化学 -&gt; 物理 -&gt; 数学
     数学和物理谁是本源？
@@ -5631,6 +5821,7 @@ nas
         思源笔记
         为知笔记
         云雀
+        飞书
         OneNote
         Google Keep
         Obsidian
@@ -5638,6 +5829,7 @@ nas
         Roam Research
         TiddlyWiki
         Flomo
+        Notion
     gtd (Getting Things Done)
     pkm (Personal Knowledge Management, 个人知识管理)
     PIM (Personal Information Management, 个人信息管理)
@@ -5679,22 +5871,93 @@ nas
         方便地检索 知识和信息
         需要做什么
 汽车，飞机和模拟器
+    如何驾驶汽车
+        汽车的分类
+        汽车的组成
+        自动驾驶
+            openpilot
+    如何驾驶飞机
+        固定翼
+            执照的种类
+        直升机
+            执照的种类
 游戏机的模拟器
     平台
-        街机 家机 掌机 pc
+        街机 家机 掌机 pc 手机 其它
     类型
-        ACT
-        FTG
-        SLG
-        MUG
+        ACT Action  动作
+        AAVG    Action Adventure Game   动作冒险
+        FTG Fighting Game   格斗游戏
+        SLG Simulation Game 模拟游戏
+        MUG Music Game  音乐游戏
+        RPG Role-Playing Game   角色扮演
+        MMORPG  Massively Multiplayer Online Role-Playing Game  大型多人在线角色扮演游戏
+        RTS Real-Time Strategy  即时战略
+        FPS First-Person Shooter    第一人称射击游戏
+        SPG Sports Game 运动游戏
+        RCG Racing Game 赛车游戏
     模拟飞行
         DCS
         X-Plane
         MFS
         FSX/P3D
+    模拟汽车驾驶
+        极品飞车 ea
+        gt赛车 sony
+        极限竞速 微软
+        山脊赛车 Namco
+        岸湾 SEGA
+        头文字D SEGA
+        狂野飙车 Gameloft
+        首都高赛车 SEGA
     策略或模拟经营类的游戏
-        文明 全面战争 P社四萌 城市天际线
+        文明 全面战争 城市天际线 坎巴拉太空计划
+        P社四萌
+            十字军之王 欧陆风云 维多利亚 钢铁雄心 群星
     小时候玩过的游戏
+        碧海银沙
+            炸弹人
+            PANG 96
+        红警
+            95 2 尤里的复仇 3 起义时刻
+        魔兽
+            3 冰封王座
+        国家的崛起
+        帝国时代3
+        罗马的复仇
+        三国群英传
+        极品飞车6
+        fifa 2006
+        街机
+            战斧
+            拳皇
+            街头霸王
+            合金弹头
+            龙与地下城
+            名将
+            圆桌骑士
+            忍者棒球
+            恐龙快打
+        掌机
+            ga/gba
+            psp
+                三国志
+                大航海时代
+                真三国无双
+        fc
+            坦克大战
+            俄罗斯方块
+        falsh
+            闪客快打
+            拳皇win
+            死神与火影
+            绿巨人
+        暴力摩托
+        大富翁
+        qq游戏
+            祖玛 泡泡龙 连连看 对对碰 泡泡堂
+        qq空间
+        网游
 媒体相关的经验
     multimedia
     multi-media
@@ -5736,6 +5999,7 @@ nas
         quick editor
     ed
         editor
+        编辑器ed 汇编器as 外壳shell 被称为早期unix三个关键要素
     ex
         extended editor
     vi
@@ -5752,6 +6016,7 @@ nas
             多数情况下预装的是 small
             通过包管理器装的是 huge
             多数情况下 vi 也只是 vim 的别名
+            多数情况下 ex 也只是 vim 的别名
             gvim 也是 huge
             gvim 也叫做 vim-gnome
         windows 下的vim就是gvim
@@ -6464,10 +6729,6 @@ Hello what what is the first thing, and I am am scq000.
         新三论
             结构论、协同论、突变论
         还有一个 复杂系统科学
-如何判断自己是否学会了某一项技能？
-    特别是数学相关的？
-        感觉看原理时一看就懂，实践时一做就错
-从零开始学习数学建模
 为什么网络上的文章作用不是很大？
     没有描述运行环境
     没有描述软件版本
@@ -6562,7 +6823,9 @@ Hello what what is the first thing, and I am am scq000.
     什么是密码朋克(Crypto punk)
 java
     命令行
+        纯手工管理依赖和编译
         Ant
+            ant 的作用类似于 make 并不能管理依赖
         Maven
             pom.xml
             Maven Wrapper
@@ -6642,7 +6905,35 @@ java
             九个内置对象
         tomcat
             普通的tomcat
+                可以直接把 jsp 文件放进 tomcat 根目录里运行，就像 php 那样
+                war 就是 jar 只是文件后缀不一样而已，打包命令是一样的
+                war 也是直接放在tomcat根目录下的webapps
+                    tomcat 默认情况下启动后会自动解压 war 的
             嵌入式的tomcat
+            常见的 jar
+                servlet
+                jsp
+                jstl
+                jackson
+                Apache Commons
+                mysql-connector-java
+                log4j
+                sqlite-jdbc
+            servlet 的一般目录结构
+                .setting     一般的eclipse项目都有这个
+                src          就是放源码的
+                    要正确地编译servlet
+                        编译时要加上tomcat下的lib包，虽然不是全都能用上，但没心思区分哪个有用哪个没用了
+                        编译好的servlet要放在正确的目录里，一般是网站根目录的WEB-INF/classes目录下
+                WebContent   这个是网站的根目录，一般把这个目录直接放到tomcat根目录下的webapps里就可以运行了，
+                        放静态文件，jsp，lib，编译好的java类，一般会新建一些文件夹来放jsp文件
+                    META-INF 不知道是放什么的
+                    WEB-INF  放lib和编译好的servlet和其它java类的，也可以放一些不能被外部访问的文件
+                        classes 编译好的java类，包含servlet
+                        lib     放lib的，一般有servlet，jsp，和其它第三方的lib
+                        web.xml tomcat的配置文件
+                .classpath   一般的eclipse项目都有这个
+                .project     一般的eclipse项目都有这个
         ssh
             Struts2
             Spring
@@ -6787,4 +7078,6 @@ tar --xz -cf UrsaMinor-`date +%g%m%d%H%M`.tar.xz UrsaMinor
 想了解的事
 想做的事
 需要做的事
+
+学了那么多，感觉也都是 茴 字的四种写法
 </code></pre>
