--- a/f2h2h1.github.io/关于字符编码的一些坑.html
+++ b/f2h2h1.github.io/关于字符编码的一些坑.html
@@ -2035,6 +2035,25 @@ utf-8 ----------------
 <li>编译时显式声明源码的编码和运行时的编码</li>
 <li>程序运行时要确保 shell 和终端能接收和输出对应的编码</li>
 </ol>
+&lt;!--
+
+输入时的 编码 和 字符集
+传输时的 编码 和 字符集
+处理时的 编码 和 字符集
+存储时的 编码 和 字符集
+输出时的 编码 和 字符集
+    输出时还要考虑字体是否被客户端支持
+
+客户端的 编码 和 字符集
+网络传输过程的 编码 和 字符集
+服务端的 编码 和 字符集
+    应用的 编码 和 字符集
+    数据库的 编码 和 字符集
+        数据库还涉及一个字符集的排序规则
+    操作系统的 编码 和 字符集
+
+--&gt;
+
 <h3>参考</h3>
 <p><a href="https://zh.cppreference.com/w/c/string/byte">https://zh.cppreference.com/w/c/string/byte</a></p>
 <p><a href="https://zh.cppreference.com/w/c/string/multibyte">https://zh.cppreference.com/w/c/string/multibyte</a></p>
