--- a/f2h2h1.github.io/终端，控制台和外壳.html
+++ b/f2h2h1.github.io/终端，控制台和外壳.html
@@ -669,12 +669,12 @@ unalias 别名
 
 <h2>Windows 的外壳和脚本</h2>
 <h3>Windows 的外壳和终端</h3>
-<p>一开始的 dos 和 9x 的系统里， COMMAND.COM 既是也是 shell 和 终端。
+<p>一开始的 dos 和 9x 的系统里， COMMAND.COM 既是 shell 也是 终端。
 这是一个单一的程序。
 shell 和 终端 混合在一起实现的。
 并没有象 unix like 的系统里分开实现。</p>
 <p>和 COMMAND.COM 一样 ，
-cmd.exe 和 早期的 PowerShell 既是也是 shell 和 终端。
+cmd.exe 和 早期的 PowerShell 既是 shell 也是 终端。
 笔者留意到，在中文互联网里，关于 cmd 到底是 shell 还是终端，有非常多的讨论。</p>
 <p>cmd.exe 一直没更新。
 PowerShell 从 PowerShell core 开始，就是一个纯粹的 shell ，里面没有包含终端的实现代码。
