--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -105,7 +105,7 @@ body:after {
 </li>
 <li><p>This is where the <code>overflow: clip</code> becomes helpful. It’s supported by all major browsers. If you set <code>overflow-y</code> to <code>clip</code>. The <code>overflow-x</code> value will stay as is (<code>visible</code>). Now the clipping happens only on the y-axis.</p>
 </li>
-<li><p>Position <code>fixed</code> doesn’t work with <code>transform</code> CSS property. It happens because transform creates a new coordinate system and your <code>position: fixed</code> element becomes fixed to that transformed element.</p>
+<li><p>Position <code>fixed</code> doesn’t work with <code>transform</code> property for the ancestor element. It happens because <code>transform</code> creates a new stacking context and containing block, causing the fixed element to be positioned relative to that ancestor instead of the viewport.</p>
 </li>
 <li><p>Center one and right/left align other element: Grid layout may be the cleanest and most efficient method. There is no need for absolute positioning or flexbox with fake elements.</p>
 <p>&lt;img alt="header_center_grid" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h8pu4q80utj30zq0u0gnm.jpg" width="600" /&gt;</p>
@@ -218,11 +218,11 @@ html {
 </code></pre>
 <p>&lt;img alt="stack-elements-with-grid" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/stack-elements-grid.png" width="650" /&gt;</p>
 </li>
-<li><p>8-digit hex notation (#RRGGBBAA): The first 6 digits are interpreted identically to the 6-digit notation. The last pair of digits, interpreted as a hexadecimal number, specifies the alpha channel of the color, where <code>00</code> represents a fully transparent color and <code>ff</code> represent a fully opaque color. Btw, 4-digit notation (#RGBA) is a shorter variant of the 8-digit notation. If there is only one number, it is duplicated: <code>1</code> means <code>11</code>, <code>c</code> means <code>cc</code>.</p>
-</li>
 <li><p><code>text-underline-offset</code> sets the offset distance of an underline text decoration line from its original position. All browsers support this property. Note that it is not part of the <code>text-decoration</code> shorthand.</p>
 </li>
 <li><p>The <code>white-space</code> CSS property sets how white space inside an element is handled. By default, the sequences of white space are collapsed. Newline characters in the source are handled the same as other white space. Use <code>white-space: pre-wrap;</code> to preserve spaces, tabs, and new lines.</p>
+</li>
+<li><p><code>color-scheme: light dark;</code> tells the browser that the element supports both light and dark color modes, with light mode being the default. The <code>light-dark()</code> CSS function is a relatively new color function that allows you to specify different colors for light and dark color schemes. It provides a more direct way to handle color variations between light and dark modes. It prevents you from having to use the <code>@media</code> query and re-declare variables.</p>
 </li>
 <li><p>CSS animations are pretty sweet, but they typically require explicit sizes, you couldn't use the intrinsic sizing keywords like <code>auto</code>, <code>min-content</code>, or <code>fit-content</code>. <a href="https://developer.chrome.com/docs/css-ui/animate-to-height-auto">From Chrome 129</a>, you can declare <code>interpolate-size: allow-keywords</code> on <code>:root</code> to enable transitioning to and from intrinsic sizing keywords for the entire document.</p>
 </li>
