--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -144,7 +144,18 @@ const req = await fetch('/api/data', {
 <li><a href="https://github.com/elbywan/wretch">wretch</a> is a tiny wrapper built around fetch.</li>
 <li>Axios is great <em>(Axios is based on XMLHttpRequests)</em>, but a bit large on kb compared to wretch. <a href="https://github.com/developit/redaxios">Redaxios</a> is a great small alternative to axios.</li>
 <li><a href="https://github.com/sindresorhus/ky">Ky</a> is a tiny and elegant HTTP client based on the browser Fetch API.</li>
+<li><a href="https://github.com/L-Blondy/up-fetch">upfetch</a> is an advanced fetch client builder with standard schema validation, automatic response parsing, smart defaults and more.</li>
 </ul>
+<p>Make a fetch request with schema validation. The response is already parsed and properly typed based on the schema.</p>
+<pre><code class="lang-js">import { z } from 'zod'
+
+const posts = await upfetch('/posts/1', {
+  schema: z.object({
+    id: z.number(),
+    title: z.string(),
+  }),
+})
+</code></pre>
 <h2>POST Requests</h2>
 <p>The HTTP POST method sends data to the server. The type of the body of the request is indicated by the <code>Content-Type</code> header.</p>
 <p>When using cURL, <code>-d</code> means transfer payload, <code>-H</code> is the header info included in requests, <code>GET</code> is the default one, use <code>-X</code> to support other HTTP verbs.</p>
@@ -269,8 +280,54 @@ console.log(myHeaders.get('X-Custom-Header')); // null
 <li><strong>Response.url</strong>: The URL of the response. It will be the final URL obtained after any redirects.</li>
 </ul>
 <p>The body of Response allows you to declare what its content type is and how it should be handled (<code>.json()</code>, <code>.blob()</code>, <code>.arrayBuffer()</code>, <code>.formData()</code>, <code>.text()</code>). For example, The <code>json()</code> method of the Response interface takes a Response stream and reads it to completion. It returns a promise which resolves with the result of parsing the body text as JSON.</p>
-<blockquote><p><code>Response.body</code> is a <code>ReadableStream</code> of the body contents. <a href="https://mdn.github.io/dom-examples/streams/simple-pump/">In this example</a> we fetch an image, expose the response's stream using <code>response.body</code>, create a reader using <code>ReadableStream.getReader()</code>, then enqueue that stream's chunks into a second, custom readable stream — effectively creating an identical copy of the image.</p>
-</blockquote>
+<p>An important concept is that Response bodies can only be consumed once.</p>
+<pre><code class="lang-js">const response = new Response('{"message": "hello"}');
+
+// This works
+const data = await response.json();
+
+// This fails
+try {
+  const data2 = await response.json();
+} catch (error) {
+  console.log("Error: Body already consumed");
+}
+</code></pre>
+<p>Another important thing to note is that <code>Response.body</code> is a <code>ReadableStream</code> of the body contents.</p>
+<ul>
+<li>The <code>getReader()</code> approach gives you more fine-grained control.</li>
+<li>The <code>for await...of</code> syntax is more concise and uses the response body's async iterator interface internally.</li>
+</ul>
+<pre><code class="lang-js">const response = await fetch("large-file.mp4");
+const reader = response.body.getReader();
+
+while (true) {
+  const { done, value } = await reader.read();
+  if (done) break;
+
+  // value is a Uint8Array chunk
+  processChunk(value);
+}
+
+// You can create your own ReadableStream 
+const stream = new ReadableStream({
+  start(controller) {
+    controller.enqueue("First chunk");
+    controller.enqueue("Second chunk");
+    controller.close();
+  },
+});
+
+// Bad: Loads entire file
+const response = await fetch("huge-video.mp4");
+const blob = await response.blob();
+
+// Good: Process in chunks
+const response = await fetch("huge-video.mp4");
+for await (const chunk of response.body) {
+  processVideoChunk(chunk);
+}
+</code></pre>
 <pre><code class="lang-js">// An example to fetch image with progress indicator
 // https://github.com/AnthumChris/fetch-progress-indicators
 
