--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -1,12 +1,4 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/frontend-interview.md">仓库源文</a>，<a href="https://kexizeroing.github.io/frontend-interview">站点原文</a></h2>
-<p>更全面的准备可以参考:</p>
-<ul>
-<li><a href="https://hzfe.github.io/awesome-interview">https://hzfe.github.io/awesome-interview</a></li>
-<li><a href="https://github.com/Sunny-117/js-challenges">https://github.com/Sunny-117/js-challenges</a></li>
-<li><a href="https://blog.algomooc.com">https://blog.algomooc.com</a></li>
-<li><a href="https://github.com/tigerabrodi/leetcode-2025-notes">https://github.com/tigerabrodi/leetcode-2025-notes</a></li>
-</ul>
-<hr/>
 <ol>
 <li>假设现在有 20 个异步请求需要发送，但由于某些原因，我们必须将同一时刻的并发请求数量控制在 3 个以内。实现一个并发请求函数，要求最大并发数 maxNum，每当有一个请求返回，就留下一个空位，可以增加新的请求。当所有请求完成后，结果按照 urls 里面的顺序依次输出。</li>
 </ol>
@@ -439,84 +431,51 @@ function hasCircularReference(obj) {
 }
 </code></pre>
 <ol>
-<li>Parse Server-Sent Events from an API. Write a function that implements the <code>sseStreamIterator</code>, which can be used in <code>for await (const event of sseStreamIterator(apiUrl, requestBody))</code>.</li>
+<li>Implement a streaming function that processes text data from a server, where messages need to be displayed character by character as they arrive.</li>
 </ol>
 <blockquote><p>Key Term: Streaming breaks up a resource you want to send or receive over a network into smaller chunks. This is common for browsers when receiving media assets, such as video buffering or partial loading of images.</p>
 </blockquote>
-<pre><code class="lang-js">// https://gist.github.com/simonw/209b46563b520d1681a128c11dd117bc
-async function* sseStreamIterator(apiUrl, requestBody) {
-  const response = await fetch(apiUrl, {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-      'Authorization': `Bearer ${process.env.OPENAI_API_KEY}`,
-    },
-    body: JSON.stringify(requestBody),
-  });
-
-  if (!response.ok) {
-    throw new Error(`HTTP error! status: ${response.status}`);
-  }
-
-  const reader = response.body.getReader();
-  // `TextDecoder` is needed to convert the binary data (Uint8Array) into string.
-  const decoder = new TextDecoder();
-  let buffer = '';
-
-  while (true) {
-    const { done, value } = await reader.read();
-    if (done) break;
-    // `stream: true` keeps that partial character in an internal buffer, not incorrectly decoded.
-    buffer += decoder.decode(value, { stream: true });
-    const events = buffer.split(/\r\n\r\n/);
-    // the last element which might be an incomplete event is removed
-    // Partial data is stored in the buffer and completed with data from the next chunk.
-    buffer = events.pop() || '';
-
-    for (const event of events) {
-      // could include multiple fields per event like id:, event:, in addition to the data: field.
-      const lines = event.split(/\r\n/);
-      const parsedEvent = {};
-
-      for (const line of lines) {
-        if (line.startsWith('data: ')) {
-          const dataContent = line.slice(6);
-          try {
-            parsedEvent.data = JSON.parse(dataContent);
-          } catch (error) {
-            parsedEvent.data = null;
-            parsedEvent.data_raw = dataContent;
-          }
-        } else if (line.includes(': ')) {
-          const [key, value] = line.split(': ', 2);
-          parsedEvent[key] = value;
+<pre><code class="lang-js">// Read from a stream and decode the chunks as UTF-8 text
+function streamAsyncIterator(reader: ReadableStreamDefaultReader&lt;Uint8Array&gt;) {
+  const decoder = new TextDecoder("utf-8");
+  return {
+    async *[Symbol.asyncIterator]() {
+      try {
+        while (true) {
+          const { done, value } = await reader.read();
+          if (done) return;
+          yield decoder.decode(value);
         }
-      }
-
-      if (Object.keys(parsedEvent).length &gt; 0) {
-        yield parsedEvent;
+      } finally {
+        // When call reader.read(), the reader acquires an exclusive lock on the stream
+        reader.releaseLock();
       }
     }
+  };
+}
+
+const messagesWithInput: Message[] = [
+  ...messages,
+  { role: "system", content: "You are a..." },
+  { role: "user", content: input },
+];
+
+const stream = await chatAPI({ messages: messagesWithInput });
+if (stream.body) {
+  let assistantResponse = "";
+  const reader = stream.body.getReader();
+
+  for await (const value of streamAsyncIterator(reader)) {
+    const { message: { content } } = JSON.parse(value);
+    assistantResponse += content;
+
+    setMessages([
+      ...messagesWithInput,
+      {
+        role: "assistant",
+        content: assistantResponse,
+      },
+    ]);
   }
 }
-</code></pre>
-<pre><code class="lang-js">// TextEncoder and TextDecoder are used to convert between strings and Uint8Arrays.
-// TextEncoder only supports UTF-8 encoding, 
-// while TextDecoder can support various encodings.
-const encoder = new TextEncoder();
-const decoder = new TextDecoder();
-
-const longMessage = "This is a longer message that we'll process in chunks";
-const encodedLong = encoder.encode(longMessage);
-
-// Simulate processing data in chunks (e.g., streaming)
-const chunkSize = 10;
-for (let i = 0; i &lt; encodedLong.length; i += chunkSize) {
-  const chunk = encodedLong.slice(i, i + chunkSize);
-  const decodedChunk = decoder.decode(chunk, { stream: true });
-  console.log(`Chunk ${i/chunkSize + 1}:`, decodedChunk);
-}
-
-// Final chunk (need to call decode without stream option to finish)
-decoder.decode(); // Flush the stream
 </code></pre>
