--- a/kexizeroing.github.io/Pixel, resolution and fps.html
+++ b/kexizeroing.github.io/Pixel, resolution and fps.html
@@ -68,8 +68,8 @@ el.style.display = 'none'
 <ol>
 <li>Style: Calculate the styles that apply to the elements.</li>
 <li>Layout: Generate the geometry and position for each element.</li>
-<li>Paint: Fill out the pixels for each element into layers.</li>
-<li>Composite: Draw the layers to the screen.</li>
+<li>Paint: Fill out the pixels for each element.</li>
+<li>Composite: Separate the elements into layers and draw the layers to the screen.</li>
 </ol>
 <p>When you animate something on a page that has already loaded these steps have to happen again. For example, if you animate something that changes layout, the paint and composite steps also have to run again. Animating something that changes layout is therefore more expensive than animating something that only changes compositing.</p>
 <p>By placing the things that will be animated or transitioned onto a new layer, the browser only needs to repaint those items and not everything else. Browsers will often make good decisions about which items should be placed on a new layer, but you can manually force layer creation with the <code>will-change</code> property. However, creating new layers should be done with care because each layer uses memory.</p>
@@ -82,10 +82,10 @@ el.style.display = 'none'
 <li>The element has been given its own compositing layer. (it may be forced by using a "go faster" hack like <code>transform: translate3d</code>)</li>
 </ol>
 <blockquote><p>More knowledge about GPU:</p>
+<p>Broadly speaking, CPUs are better for sequential programs and GPUs are better for parallel programs. CPUs have a small number of large cores (Apple’s M3 has an 8-core CPU), and GPUs have many small cores (Nvidia’s H100 GPU has thousands of cores).</p>
 <ol>
 <li>GPUs (Graphical Processing Units) were originally designed to accelerate rendering of images, 2D, and 3D graphics. However, due to their capability of performing many parallel operations, their utility extends beyond that to applications such as deep learning. GPUs prioritize having a large number of cores to achieve a higher level of parallelism.</li>
 <li>Imagine you want to add two vectors, a simple implementation iterates over the vector, adding each pair of elements on each iteration sequentially. But the addition of the <em>ith</em> pair of elements does not rely on any other pair. So, what if we could execute these operations concurrently, adding all of the pairs of elements in parallel? That’s when the GPUs come into action. Modern GPUs can run millions of threads simultaneously, enhancing performance of these mathematical operations on massive vectors.</li>
-<li>The Chrome team is thrilled to announce that WebGPU is now available by default in Chrome 113, which allows high-performance 3D graphics and data-parallel computation on the web. See <a href="https://developer.chrome.com/blog/webgpu-release/">https://developer.chrome.com/blog/webgpu-release/</a></li>
 </ol>
 </blockquote>
 <h2>Best practice for font units</h2>
