--- a/kexizeroing.github.io/Practical considerations for Input fields.html
+++ b/kexizeroing.github.io/Practical considerations for Input fields.html
@@ -154,150 +154,6 @@ function TabButton({ children, isActive, onClick }) {
   )
 }
 </code></pre>
-<h2>React 19 <code>useActionState</code> and <code>useFormStatus</code></h2>
-<p>React 19 has a built-in mechanism for handling forms called "actions". Below example from <a href="https://www.youtube.com/watch?v=ExZUdkfu-KE">Shruti Kapoor's video</a> shows how to convert a form from React 18 to React 19.</p>
-<ul>
-<li>There’s no need to add <code>event.preventDefault</code> because that’s handled for us by React.</li>
-<li>The <code>action</code> is automatically treated as a transition.</li>
-<li>We can hook into the pending state of this action using <code>useFormStatus</code>.</li>
-<li>React manages errors and race conditions to ensure our form’s state is always correct.</li>
-</ul>
-<pre><code class="lang-js">// React 18
-function App() {
-  const [name, setName] = useState("");
-  const [isPending, setIsPending] = useState("");
-
-  const handleChange = (event) =&gt; {
-    setName(event.target.value);
-  };
-
-  const handleSubmit = (event) =&gt; {
-    event.preventDefault();
-    setIsPending(true);
-    setTimeout(() =&gt; {
-      // call API
-      setIsPending(false);
-    }, [1000]);
-  };
-
-  return (
-    &lt;form&gt;
-      &lt;input type="text" name="name" onChange={handleChange} /&gt;
-      { isPending ? &lt;p&gt;{"Loading"}&lt;/p&gt; : &lt;p&gt; Hello in React 18 {name}&lt;/p&gt; }
-      &lt;button onClick={handleSubmit} disabled={isPending}&gt;
-        Update
-      &lt;/button&gt;
-    &lt;/form&gt;
-  );
-}
-</code></pre>
-<pre><code class="lang-js">// React 19
-function RenderName({ name }) {
-  // https://react.dev/reference/react-dom/hooks/useFormStatus
-  // `useFormStatus` will only return status information for a parent &lt;form&gt;
-  const { pending } = useFormStatus();
-  return &lt;div&gt;{pending ? "Loading" : `Hello in React 19 ${name}` }&lt;/div&gt;;
-}
-
-function SubmitButton() {
-  const { pending } = useFormStatus();
-  return (
-    &lt;button type="submit" disabled={pending}&gt;
-      Update
-    &lt;/button&gt;
-  );
-}
-
-function App() {
-  // https://react.dev/reference/react/useActionState
-  // You pass `useActionState` an existing form action function as well as an initial state,
-  // and it returns a new action that you use in your form, along with the latest form state.
-  // The latest form state is also passed to the function that you provided.
-  const [state, formAction] = useActionState(submitFormAction, { name: "" });
-
-  return (
-    &lt;form action={formAction}&gt;
-      &lt;input type="text" name="inputName" /&gt;
-      &lt;RenderName name={state?.name} /&gt;
-      &lt;SubmitButton /&gt; 
-    &lt;/form&gt;
-  );
-}
-
-// actions.js
-'use server';
-
-export const submitFormAction = async (previousState, formData) =&gt; {
-  const name = formData.get("name");
-  await new Promise((res) =&gt; setTimeout(res, 1000));
-  return { ...previousState, name: name };
-};
-</code></pre>
-<p>There is another example from React Conf 2024 displaying a message box, which is progressively enhanced with React 19 features. <strong>The main functionality of the form works without JavaScript</strong>.</p>
-<pre><code class="lang-js">// https://www.youtube.com/watch?v=X9cw4VczYVg
-export default function MessageInput({ userId }) {
-  const [state, submitMessageAction] = useActionState(submitMessage, {
-    success: false,
-  });
-
-  useEffect(() =&gt; {
-    if (state.error) {
-      toast.error(state.error);
-    }
-  }, [state.error, state.timestamp]);
-
-  return (
-    &lt;&gt;
-      &lt;form action={submitMessageAction} className="flex flex-col gap-2 p-6"&gt;
-        &lt;input
-          autoComplete="off"
-          required
-          minLength={1}
-          name="content"
-          className="italic outline-none"
-          placeholder="Type a message..."
-        /&gt;
-        &lt;input type="hidden" name="userId" value={userId} /&gt;
-        {/* get pending status using `useFormStatus()` inside the button component */}
-        &lt;SubmitButton&gt;Send&lt;/SubmitButton&gt;
-      &lt;/form&gt;
-    &lt;/&gt;
-  );
-}
-
-export async function submitMessage(_prevState, formData) {
-  // z.object({
-  //   content: z.string().min(1, {
-  //     message: 'Content must be at least 1 characters long',
-  //   }),
-  //   createdById: z.string().uuid({
-  //     message: 'Invalid user ID',
-  //   }),
-  // });
-  const result = messageSchema.safeParse({
-    content: formData.get('content'),
-    createdById: formData.get('userId'),
-  });
-
-  if (!result.success) {
-    return {
-      error: 'Invalid message!',
-      success: false,
-      timestamp: new Date(),
-    };
-  }
-
-  await prisma.message.create({
-    data: result.data,
-  });
-
-  revalidatePath('/');
-
-  return {
-    success: true,
-  };
-}
-</code></pre>
 <h2>Styling validation status</h2>
 <p>The <code>:user-valid</code> and <code>:user-invalid</code> pseudo-class selectors are similar to the existing <code>:valid</code> and <code>:invalid</code> pseudo-classes. Both match a form control based on whether its current value satisfies its validation constraints. However, the advantage of the new <code>:user-valid</code> and <code>:user-invalid</code> pseudo-classes is that they match a form control only after a user has significantly interacted with the input.</p>
 <p>A form control that is required and empty will match <code>:invalid</code> even if a user has not started interacting with the page. However, that same form control won't match <code>:user-invalid</code> until the user has changed the input and left it in an invalid state.</p>
@@ -321,3 +177,4 @@ input:user-invalid + span::before {
   color: red;
 }
 </code></pre>
+<p>Btw, from HTML 2.0 spec: When there is only one single-line text input field in a form, the user agent should accept Enter in that field as a request to submit the form. <code>number</code>, <code>email</code>, <code>password</code>, <code>search</code>, <code>tel</code>, and <code>url</code> all are regarded as single-line text inputs. You can add any other form elements including input types like <code>date</code> or <code>color</code>, even a <code>textarea</code>, and the form will still submit on enter (when the focus is on the text field).</p>
