--- a/kexizeroing.github.io/Understand npm concepts.html
+++ b/kexizeroing.github.io/Understand npm concepts.html
@@ -76,7 +76,9 @@
 │ bundler           │ 🟢                           │
 └───────────────────┴──────────────────────────────┘
 </code></pre>
-<p>If you want to publish both CJS and ESM code, you can use <code>tsup</code>. This is a tool built on top of esbuild that compiles your TypeScript code into both formats. We'll now be running <code>tsup</code> to compile our code instead of <code>tsc</code>. <em>A minimal TS library starter: <a href="https://github.com/egoist/ts-lib-starter">https://github.com/egoist/ts-lib-starter</a></em></p>
+<p>If you want to publish both CJS and ESM code, you can use <code>tsup</code>. This is a tool built on top of esbuild that compiles your TypeScript code into both formats. We'll now be running <code>tsup</code> to compile our code instead of <code>tsc</code>.</p>
+<blockquote><p>By default <code>tsup</code> bundles all import-ed modules but <code>dependencies</code> and <code>peerDependencies</code> in your <code>package.json</code> are always excluded.</p>
+</blockquote>
 <pre><code class="lang-ts">// tsup.config.ts
 import { defineConfig } from "tsup";
 
